fix bug & update json txt

--- a/app_name.json
+++ b/app_name.json
@@ -74,6 +74,7 @@
   "com.xiaomi.aiasst.vision": "小爱翻译",
   "com.xiaomi.aicr": "MiAI引擎",
   "com.xiaomi.barrage": "弹幕通知",
+  "com.xiaomi.cameratools": "相机标定",
   "com.xiaomi.gamecenter.sdk.service": "游戏服务",
   "com.xiaomi.joyose": "Joyose",
   "com.xiaomi.location.fused": "融合位置服务",
