--- a/app_version.json
+++ b/app_version.json
@@ -2,24 +2,24 @@
   "cn.wps.moffice_eng.xiaomi.lite": "3.1.0",
   "com.android.browser": "17.3.5",
   "com.android.calendar": "13.9.0.0",
-  "com.android.camera": "4.5.002460.3",
+  "com.android.camera": "4.5.002680.0",
   "com.android.contacts": "12.3.5.8",
   "com.android.deskclock": "13.66.0",
   "com.android.email": "V13_20230208_b1",
-  "com.android.fileexplorer": "4.4.7.3",
+  "com.android.fileexplorer": "4.4.8.5",
   "com.android.mms": "14.2.3.1",
   "com.android.providers.downloads.ui": "122.11.24.800001",
   "com.android.quicksearchbox": "9.8.0.3",
   "com.android.soundrecorder": "3.3.5.9",
   "com.android.thememanager": "4.0.1.4",
-  "com.android.updater": "8.0.7",
-  "com.baidu.input_mi": "10.6.120.877",
-  "com.duokan.phone.remotecontroller": "6.5.0M",
-  "com.iflytek.inputmethod.miui": "8.1.8040",
+  "com.android.updater": "8.0.8",
+  "com.baidu.input_mi": "10.6.120.983",
+  "com.duokan.phone.remotecontroller": "6.5.3M",
+  "com.iflytek.inputmethod.miui": "8.1.8043",
   "com.mfashiongallery.emag": "M923031300-S",
   "com.mi.health": "3.13.2",
   "com.milink.service": "14.2.0.5.33c92e7.2704115",
-  "com.mipay.wallet": "6.49.1.4754.2042",
+  "com.mipay.wallet": "6.49.2.4755.2042",
   "com.miui.accessibility": "5.9.0",
   "com.miui.aod": "RELEASE-2.11.1080-03101607",
   "com.miui.bugreport": "3.3.15.31",
@@ -30,16 +30,16 @@
   "com.miui.cloudservice": "1.12.0.0.60",
   "com.miui.compass": "13.2.4.1",
   "com.miui.contentextension": "2.5.78",
-  "com.miui.extraphoto": "1.7.8.0.1",
-  "com.miui.gallery": "3.5.3.3",
+  "com.miui.extraphoto": "1.7.9.0.0",
+  "com.miui.gallery": "3.5.3.4",
   "com.miui.greenguard": "3.7.12.13",
   "com.miui.guardprovider": "1.5.1-20230217.0",
-  "com.miui.home": "RELEASE-4.39.9.6264-03172039",
+  "com.miui.home": "RELEASE-4.39.9.6276-03242129",
   "com.miui.huanji": "3.9.7",
   "com.miui.hybrid": "1.10.0.0",
   "com.miui.maintenancemode": "3.1.3",
   "com.miui.mediaeditor": "1.0.3.2.1",
-  "com.miui.miinput": "RELEASE-1.0.2303241600",
+  "com.miui.miinput": "RELEASE-1.0.2303311902",
   "com.miui.miservice": "14.0.1.0",
   "com.miui.mishare.connectivity": "2.16.0",
   "com.miui.misound": "2.0",
@@ -62,31 +62,32 @@
   "com.miui.tsmclient": "23.01.03.1.o",
   "com.miui.uireporter": "1.0.5",
   "com.miui.video": "v2023021890(MiVideo-ROM)",
-  "com.miui.virtualsim": "6.4.1",
+  "com.miui.virtualsim": "6.4.3",
   "com.miui.vpnsdkmanager": "24",
   "com.miui.weather2": "13.0.7.2",
   "com.miui.yellowpage": "202303020",
   "com.mobiletools.systemhelper": "1.2-20220907",
-  "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202303071945",
+  "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202303172143",
   "com.unionpay.tsmservice.mi": "01.00.44",
-  "com.xiaomi.account": "R-22.12.26.03",
+  "com.xiaomi.account": "R-23.03.01.00",
   "com.xiaomi.aiasst.service": "5.2.105",
   "com.xiaomi.aiasst.vision": "4.1.8",
   "com.xiaomi.aicr": "1.1.2",
   "com.xiaomi.barrage": "2.0.10.230324-SNAPSHOT",
+  "com.xiaomi.cameratools": "22.10.20.0",
   "com.xiaomi.gamecenter.sdk.service": "8.0.3",
   "com.xiaomi.joyose": "2.2.63",
   "com.xiaomi.location.fused": "3.0.2",
   "com.xiaomi.macro": "2.2.4.S",
   "com.xiaomi.market": "4.42.5",
   "com.xiaomi.metoknlp": "5.0.7",
-  "com.xiaomi.mi_connect_service": "2.12.200",
+  "com.xiaomi.mi_connect_service": "2.14.66",
   "com.xiaomi.mibrain.speech": "1.4.6",
   "com.xiaomi.migameservice": "0.6.1",
-  "com.xiaomi.mirror": "3.7.59",
+  "com.xiaomi.mirror": "3.7.59.b",
   "com.xiaomi.misettings": "2.9.9.42",
   "com.xiaomi.payment": "2.5.0",
-  "com.xiaomi.scanner": "15.0.3.7",
+  "com.xiaomi.scanner": "15.0.4.2",
   "com.xiaomi.simactivate.service": "R-23.03.20",
   "com.xiaomi.ugd": "1.2.0",
   "com.xiaomi.vipaccount": "4.2.1",
