--- a/app_name.json
+++ b/app_name.json
@@ -7,6 +7,7 @@
   "com.android.deskclock": "时钟",
   "com.android.email": "电子邮件",
   "com.android.fileexplorer": "文件管理",
+  "com.android.incallui": "电话",
   "com.android.mms": "短信",
   "com.android.providers.downloads.ui": "下载管理",
   "com.android.quicksearchbox": "搜索",
@@ -18,10 +19,10 @@
   "com.iflytek.inputmethod.miui": "讯飞输入法小米版",
   "com.mfashiongallery.emag": "小米画报",
   "com.mi.health": "小米运动健康",
-  "com.milink.service": "投屏",
+  "com.milink.service": "互联互通服务",
   "com.mipay.wallet": "钱包",
   "com.miui.accessibility": "小米无障碍",
-  "com.miui.aod": "万象息屏",
+  "com.miui.aod": "息屏与锁屏编辑",
   "com.miui.bugreport": "用户反馈",
   "com.miui.calculator": "计算器",
   "com.miui.carlink": "CarWith",
@@ -33,7 +34,7 @@
   "com.miui.extraphoto": "Bokeh",
   "com.miui.gallery": "相册",
   "com.miui.greenguard": "家人守护",
-  "com.miui.guardprovider": "MIUI安全组件",
+  "com.miui.guardprovider": "系统安全组件",
   "com.miui.home": "系统桌面",
   "com.miui.huanji": "小米换机",
   "com.miui.hybrid": "快应用服务框架",
@@ -55,8 +56,10 @@
   "com.miui.screenrecorder": "屏幕录制",
   "com.miui.screenshot": "截屏",
   "com.miui.securityadd": "系统服务组件",
-  "com.miui.securitycenter": "手机管家",
+  "com.miui.securitycenter": "安全服务",
   "com.miui.securityinputmethod": "小米安全键盘",
+  "com.miui.securitymanager": "手机管家-Manager",
+  "com.miui.themestore": "主题商店",
   "com.miui.thirdappassistant": "三方应用异常分析",
   "com.miui.touchassistant": "悬浮球",
   "com.miui.tsmclient": "小米智能卡",
@@ -69,6 +72,7 @@
   "com.mobiletools.systemhelper": "SystemHelper",
   "com.sohu.inputmethod.sogou.xiaomi": "搜狗输入法小米版",
   "com.unionpay.tsmservice.mi": "银联可信服务安全组件小米版本",
+  "com.xiaomi.ab": "售后支持",
   "com.xiaomi.account": "小米帐号",
   "com.xiaomi.aiasst.service": "小爱通话",
   "com.xiaomi.aiasst.vision": "小爱翻译",
@@ -84,7 +88,7 @@
   "com.xiaomi.mi_connect_service": "小米互联通信服务",
   "com.xiaomi.mibrain.speech": "系统语音引擎",
   "com.xiaomi.migameservice": "游戏高能时刻",
-  "com.xiaomi.mirror": "MIUI+ Beta版",
+  "com.xiaomi.mirror": "跨屏协同服务",
   "com.xiaomi.misettings": "小米设置",
   "com.xiaomi.payment": "米币支付",
   "com.xiaomi.scanner": "小爱视觉",
