更新离线数据库，新增几个忽略掉的安装包

--- a/app_name.json
+++ b/app_name.json
@@ -40,6 +40,7 @@
   "com.miui.hybrid": "快应用服务框架",
   "com.miui.maintenancemode": "维修模式",
   "com.miui.mediaeditor": "小米相册-编辑",
+  "com.miui.mediaviewer": "媒体查看器",
   "com.miui.miinput": "输入设置",
   "com.miui.miservice": "服务与反馈",
   "com.miui.mishare.connectivity": "小米互传",
@@ -57,6 +58,7 @@
   "com.miui.screenshot": "截屏",
   "com.miui.securityadd": "系统服务组件",
   "com.miui.securitycenter": "安全服务",
+  "com.miui.securitycore": "安全核心组件",
   "com.miui.securityinputmethod": "小米安全键盘",
   "com.miui.securitymanager": "手机管家-Manager",
   "com.miui.themestore": "主题商店",
@@ -85,6 +87,7 @@
   "com.xiaomi.macro": "自动连招",
   "com.xiaomi.market": "应用商店",
   "com.xiaomi.metoknlp": "网络位置服务",
+  "com.xiaomi.mis": "小米汽车互联服务",
   "com.xiaomi.mi_connect_service": "小米互联通信服务",
   "com.xiaomi.mibrain.speech": "系统语音引擎",
   "com.xiaomi.migameservice": "游戏高能时刻",
