--- a/app_version.json
+++ b/app_version.json
@@ -1,97 +1,104 @@
 {
-  "cn.wps.moffice_eng.xiaomi.lite": "3.1.0",
-  "com.android.browser": "17.3.5",
-  "com.android.calendar": "13.9.0.0",
-  "com.android.camera": "4.5.002680.0",
-  "com.android.contacts": "12.3.5.8",
-  "com.android.deskclock": "13.66.0",
-  "com.android.email": "V13_20230208_b1",
-  "com.android.fileexplorer": "4.4.8.5",
-  "com.android.mms": "14.2.3.1",
-  "com.android.providers.downloads.ui": "122.11.24.800001",
-  "com.android.quicksearchbox": "9.8.0.3",
-  "com.android.soundrecorder": "3.3.5.9",
-  "com.android.thememanager": "4.0.1.4",
-  "com.android.updater": "8.0.8",
-  "com.baidu.input_mi": "10.6.120.983",
-  "com.duokan.phone.remotecontroller": "6.5.3M",
-  "com.iflytek.inputmethod.miui": "8.1.8043",
-  "com.mfashiongallery.emag": "M923031300-S",
-  "com.mi.health": "3.13.2",
-  "com.milink.service": "14.2.0.5.33c92e7.2704115",
-  "com.mipay.wallet": "6.49.2.4755.2042",
-  "com.miui.accessibility": "5.9.0",
-  "com.miui.aod": "RELEASE-2.11.1080-03101607",
-  "com.miui.bugreport": "3.3.15.31",
-  "com.miui.calculator": "13.0.13",
-  "com.miui.carlink": "1.1.5-20230224",
-  "com.miui.cleanmaster": "563.0.230217.dev",
-  "com.miui.cloudbackup": "1.12.1.5.45",
-  "com.miui.cloudservice": "1.12.0.0.60",
-  "com.miui.compass": "13.2.4.1",
-  "com.miui.contentextension": "2.5.78",
-  "com.miui.extraphoto": "1.7.9.0.0",
-  "com.miui.gallery": "3.5.3.4",
-  "com.miui.greenguard": "3.7.12.13",
-  "com.miui.guardprovider": "1.5.1-20230217.0",
-  "com.miui.home": "RELEASE-4.39.9.6276-03242129",
-  "com.miui.huanji": "3.9.7",
-  "com.miui.hybrid": "1.10.0.0",
-  "com.miui.maintenancemode": "3.1.3",
-  "com.miui.mediaeditor": "1.0.3.2.1",
-  "com.miui.miinput": "RELEASE-1.0.2303311902",
-  "com.miui.miservice": "14.0.1.0",
-  "com.miui.mishare.connectivity": "2.16.0",
+  "cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
+  "com.android.browser": "17.8.211101",
+  "com.android.calendar": "15.0.0.8",
+  "com.android.camera": "5.2.000510.2",
+  "com.android.contacts": "15.0.0.9",
+  "com.android.deskclock": "15.11.0",
+  "com.android.email": "V13_20230919_d3",
+  "com.android.fileexplorer": "5.0.1.9",
+  "com.android.incallui": "3.0.55",
+  "com.android.mms": "15.0.0.7",
+  "com.android.providers.downloads.ui": "123.10.11.800005",
+  "com.android.quicksearchbox": "10.3.15.09272",
+  "com.android.soundrecorder": "5.0.13.9",
+  "com.android.thememanager": "4.2.2.2",
+  "com.android.updater": "8.4.3",
+  "com.baidu.input_mi": "10.6.122.210",
+  "com.duokan.phone.remotecontroller": "6.6.7M",
+  "com.iflytek.inputmethod.miui": "8.1.8604",
+  "com.mfashiongallery.emag": "M923102900-S",
+  "com.mi.health": "3.23.3",
+  "com.milink.service": "15.0.4.0.d8e19c9.2885918",
+  "com.mipay.wallet": "6.65.1.4924.2152",
+  "com.miui.accessibility": "6.1.2",
+  "com.miui.aod": "DEV-2.17.2060-11081939",
+  "com.miui.bugreport": "15.0.0.4",
+  "com.miui.calculator": "15.0.11",
+  "com.miui.carlink": "1.6.0-20231101",
+  "com.miui.cleanmaster": "664.0.231013.release",
+  "com.miui.cloudbackup": "1.12.1.6.11",
+  "com.miui.cloudservice": "1.12.0.1.70",
+  "com.miui.compass": "15.0.10.1",
+  "com.miui.contentextension": "3.1.2",
+  "com.miui.extraphoto": "2.0.4.0.1",
+  "com.miui.gallery": "3.7.0.2",
+  "com.miui.greenguard": "3.8.10.20",
+  "com.miui.guardprovider": "2.0.2-20231103.0",
+  "com.miui.home": "RELEASE-4.39.14.7640-11102019",
+  "com.miui.huanji": "4.1.9.3",
+  "com.miui.hybrid": "1.10.6.6",
+  "com.miui.maintenancemode": "3.1.4",
+  "com.miui.mediaeditor": "1.5.1.11.4",
+  "com.miui.mediaviewer": "v2023103003(MediaViewer-ROM)",
+  "com.miui.miinput": "RELEASE-1.0.2309051646",
+  "com.miui.miservice": "15.0.0.5",
+  "com.miui.mishare.connectivity": "2.21.5",
   "com.miui.misound": "2.0",
-  "com.miui.miwallpaper": "1.8.8-ALPHA-03201114",
-  "com.miui.newmidrive": "1.12.0.5.36",
-  "com.miui.nextpay": "23.01.03.1",
-  "com.miui.notes": "5.2.5",
-  "com.miui.notification": "1.1.4.88",
-  "com.miui.packageinstaller": "5.0.9.3-20230130",
-  "com.miui.personalassistant": "5.5.69-03171053",
-  "com.miui.phrase": "3.2.8",
-  "com.miui.player": "4.11.0.10",
-  "com.miui.screenrecorder": "2.12.6.1.1",
-  "com.miui.screenshot": "RELEASE-1.4.34-12151541",
-  "com.miui.securityadd": "9.11.29-230223.0.1",
-  "com.miui.securitycenter": "7.7.1-230309.0.1",
-  "com.miui.securityinputmethod": "2.0.9",
-  "com.miui.thirdappassistant": "4.3",
-  "com.miui.touchassistant": "9.0.5.1.1",
-  "com.miui.tsmclient": "23.01.03.1.o",
-  "com.miui.uireporter": "1.0.5",
-  "com.miui.video": "v2023021890(MiVideo-ROM)",
-  "com.miui.virtualsim": "6.4.3",
+  "com.miui.miwallpaper": "3.1.2-ALPHA-11031728",
+  "com.miui.newmidrive": "1.12.0.5.98",
+  "com.miui.nextpay": "23.11.01.1.f",
+  "com.miui.notes": "7.1.6",
+  "com.miui.notification": "1.1.6.8",
+  "com.miui.packageinstaller": "5.2.0.1.0-20231106",
+  "com.miui.personalassistant": "5.9.1-10301558",
+  "com.miui.phrase": "3.5.3",
+  "com.miui.player": "4.19.0.2",
+  "com.miui.screenrecorder": "2.13.0.5.1",
+  "com.miui.screenshot": "RELEASE-1.4.96-10301536",
+  "com.miui.securityadd": "9.11.54-231108.0.1",
+  "com.miui.securitycore": "1.1.2-15-231025",
+  "com.miui.securitycenter": "8.6.1-231103.0.1",
+  "com.miui.securityinputmethod": "3.2.3",
+  "com.miui.securitymanager": "10.0",
+  "com.miui.themestore": "12.0",
+  "com.miui.thirdappassistant": "4.5",
+  "com.miui.touchassistant": "15.0.0.9.1",
+  "com.miui.tsmclient": "23.11.01.1.f",
+  "com.miui.uireporter": "2.1.1",
+  "com.miui.video": "v2023110790(MiVideo-ROM)",
+  "com.miui.virtualsim": "6.5.5",
   "com.miui.vpnsdkmanager": "24",
-  "com.miui.weather2": "13.0.7.2",
-  "com.miui.yellowpage": "202303020",
-  "com.mobiletools.systemhelper": "1.2-20220907",
-  "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202303172143",
-  "com.unionpay.tsmservice.mi": "01.00.44",
-  "com.xiaomi.account": "R-23.03.01.00",
-  "com.xiaomi.aiasst.service": "5.2.105",
-  "com.xiaomi.aiasst.vision": "4.1.8",
-  "com.xiaomi.aicr": "1.1.2",
-  "com.xiaomi.barrage": "2.0.10.230324-SNAPSHOT",
-  "com.xiaomi.cameratools": "22.10.20.0",
-  "com.xiaomi.gamecenter.sdk.service": "8.0.3",
-  "com.xiaomi.joyose": "2.2.63",
-  "com.xiaomi.location.fused": "3.0.2",
+  "com.miui.weather2": "15.0.3.0",
+  "com.miui.yellowpage": "15.202310130",
+  "com.mobiletools.systemhelper": "1.2-20230925-U",
+  "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202310202015",
+  "com.unionpay.tsmservice.mi": "01.00.51",
+  "com.xiaomi.ab": "3.0.1.20231020",
+  "com.xiaomi.account": "R-23.08.07.08",
+  "com.xiaomi.aiasst.service": "5.6.1",
+  "com.xiaomi.aiasst.vision": "4.100.1",
+  "com.xiaomi.aicr": "2.0",
+  "com.xiaomi.barrage": "2.0.9.230705",
+  "com.xiaomi.cameratools": "23.09.26.0",
+  "com.xiaomi.gamecenter.sdk.service": "8.3.2",
+  "com.xiaomi.joyose": "2.3.04",
+  "com.xiaomi.location.fused": "4.0.0",
   "com.xiaomi.macro": "2.2.4.S",
-  "com.xiaomi.market": "4.42.5",
-  "com.xiaomi.metoknlp": "5.0.7",
-  "com.xiaomi.mi_connect_service": "2.14.66",
-  "com.xiaomi.mibrain.speech": "1.4.6",
-  "com.xiaomi.migameservice": "0.6.1",
-  "com.xiaomi.mirror": "3.7.59.b",
-  "com.xiaomi.misettings": "2.9.9.42",
-  "com.xiaomi.payment": "2.5.0",
-  "com.xiaomi.scanner": "15.0.4.2",
-  "com.xiaomi.simactivate.service": "R-23.03.20",
+  "com.xiaomi.market": "4.61.1",
+  "com.xiaomi.metoknlp": "6.0.5",
+  "com.xiaomi.mis": "0.5.4-2023110115",
+  "com.xiaomi.mi_connect_service": "3.1.450.10",
+  "com.xiaomi.mibrain.speech": "1.5.1",
+  "com.xiaomi.migameservice": "0.6.7-D",
+  "com.xiaomi.mirror": "15.00.83",
+  "com.xiaomi.misettings": "2.9.9.67",
+  "com.xiaomi.payment": "2.7.2",
+  "com.xiaomi.scanner": "15.5.1",
+  "com.xiaomi.simactivate.service": "R-23.08.28",
   "com.xiaomi.ugd": "1.2.0",
-  "com.xiaomi.vipaccount": "4.2.1",
+  "com.xiaomi.vipaccount": "4.6.0",
   "com.xiaomi.xaee": "0.2",
-  "com.xiaomi.xmsf": "6.2.2-C",
-  "miui.systemui.plugin": "14.0.0.26.0"
+  "com.xiaomi.xmsf": "7.0.1-C",
+  "miui.systemui.plugin": "15.0.1.32.0"
 }
