更新一下规则及同步本地最新版本

--- a/app_name.json
+++ b/app_name.json
@@ -23,13 +23,16 @@
   "com.mipay.wallet": "钱包",
   "com.miui.accessibility": "小米无障碍",
   "com.miui.aod": "息屏与锁屏编辑",
+  "com.miui.backup": "备份",
   "com.miui.bugreport": "用户反馈",
+  "com.miui.core": "System SDK",
   "com.miui.calculator": "计算器",
   "com.miui.carlink": "CarWith",
   "com.miui.cleanmaster": "垃圾清理",
   "com.miui.cloudbackup": "小米云备份",
   "com.miui.cloudservice": "小米云服务",
   "com.miui.compass": "指南针",
+  "com.miui.contentcatcher": "应用程序扩展服务",
   "com.miui.contentextension": "传送门",
   "com.miui.extraphoto": "Bokeh",
   "com.miui.gallery": "相册",
@@ -46,6 +49,7 @@
   "com.miui.mishare.connectivity": "小米互传",
   "com.miui.misound": "音质音效",
   "com.miui.miwallpaper": "壁纸",
+  "com.miui.newhome": "内容中心",
   "com.miui.newmidrive": "小米云盘",
   "com.miui.nextpay": "小米智能卡网页组件",
   "com.miui.notes": "笔记",
@@ -76,6 +80,7 @@
   "com.unionpay.tsmservice.mi": "银联可信服务安全组件小米版本",
   "com.xiaomi.ab": "售后支持",
   "com.xiaomi.account": "小米帐号",
+  "com.xiaomi.aireco": "小爱建议",
   "com.xiaomi.aiasst.service": "小爱通话",
   "com.xiaomi.aiasst.vision": "小爱翻译",
   "com.xiaomi.aicr": "MiAI引擎",
@@ -94,6 +99,7 @@
   "com.xiaomi.mirror": "跨屏协同服务",
   "com.xiaomi.misettings": "小米设置",
   "com.xiaomi.payment": "米币支付",
+  "com.xiaomi.registration": "运营商服务",
   "com.xiaomi.scanner": "小爱视觉",
   "com.xiaomi.simactivate.service": "小米SIM卡激活服务",
   "com.xiaomi.ugd": "GPU 驱动更新",
