--- a/app_version.json
+++ b/app_version.json
@@ -7,8 +7,8 @@
   "com.android.deskclock": "15.11.0",
   "com.android.email": "V13_20230919_d3",
   "com.android.fileexplorer": "5.0.1.9",
-  "com.android.incallui": "3.0.55",
-  "com.android.mms": "15.0.0.7",
+  "com.android.incallui": "3.0.58",
+  "com.android.mms": "15.0.0.8",
   "com.android.providers.downloads.ui": "123.10.11.800005",
   "com.android.quicksearchbox": "10.3.15.09272",
   "com.android.soundrecorder": "5.0.13.9",
@@ -19,21 +19,24 @@
   "com.iflytek.inputmethod.miui": "8.1.8604",
   "com.mfashiongallery.emag": "M923102900-S",
   "com.mi.health": "3.23.3",
-  "com.milink.service": "15.0.4.0.d8e19c9.2885918",
+  "com.milink.service": "15.0.4.1.e4a233b.2894359",
   "com.mipay.wallet": "6.65.1.4924.2152",
   "com.miui.accessibility": "6.1.2",
   "com.miui.aod": "DEV-2.17.2060-11081939",
-  "com.miui.bugreport": "15.0.0.4",
+  "com.miui.backup": "6.5.1.0",
+  "com.miui.bugreport": "15.0.0.5",
+  "com.miui.core": "1.20.1.5",
   "com.miui.calculator": "15.0.11",
   "com.miui.carlink": "1.6.0-20231101",
   "com.miui.cleanmaster": "664.0.231013.release",
   "com.miui.cloudbackup": "1.12.1.6.11",
   "com.miui.cloudservice": "1.12.0.1.70",
   "com.miui.compass": "15.0.10.1",
+  "com.miui.contentcatcher": "1.0.004",
   "com.miui.contentextension": "3.1.2",
   "com.miui.extraphoto": "2.0.4.0.1",
   "com.miui.gallery": "3.7.0.2",
-  "com.miui.greenguard": "3.8.10.20",
+  "com.miui.greenguard": "3.9.09.18",
   "com.miui.guardprovider": "2.0.2-20231103.0",
   "com.miui.home": "RELEASE-4.39.14.7640-11102019",
   "com.miui.huanji": "4.1.9.3",
@@ -46,6 +49,7 @@
   "com.miui.mishare.connectivity": "2.21.5",
   "com.miui.misound": "2.0",
   "com.miui.miwallpaper": "3.1.2-ALPHA-11031728",
+  "com.miui.newhome": "6.0.10.0825",
   "com.miui.newmidrive": "1.12.0.5.98",
   "com.miui.nextpay": "23.11.01.1.f",
   "com.miui.notes": "7.1.6",
@@ -76,6 +80,7 @@
   "com.unionpay.tsmservice.mi": "01.00.51",
   "com.xiaomi.ab": "3.0.1.20231020",
   "com.xiaomi.account": "R-23.08.07.08",
+  "com.xiaomi.aireco": "1.11.20.a9hs",
   "com.xiaomi.aiasst.service": "5.6.1",
   "com.xiaomi.aiasst.vision": "4.100.1",
   "com.xiaomi.aicr": "2.0",
@@ -90,10 +95,11 @@
   "com.xiaomi.mis": "0.5.4-2023110115",
   "com.xiaomi.mi_connect_service": "3.1.450.10",
   "com.xiaomi.mibrain.speech": "1.5.1",
-  "com.xiaomi.migameservice": "0.6.7-D",
+  "com.xiaomi.migameservice": "0.6.9-B",
   "com.xiaomi.mirror": "15.00.83",
   "com.xiaomi.misettings": "2.9.9.67",
   "com.xiaomi.payment": "2.7.2",
+  "com.xiaomi.registration": "4.0.2",
   "com.xiaomi.scanner": "15.5.1",
   "com.xiaomi.simactivate.service": "R-23.08.28",
   "com.xiaomi.ugd": "1.2.0",
