--- a/app_name.json
+++ b/app_name.json
@@ -34,10 +34,12 @@
   "com.miui.compass": "指南针",
   "com.miui.contentcatcher": "应用程序扩展服务",
   "com.miui.contentextension": "传送门",
+  "com.miui.creation": "小米创作",
   "com.miui.extraphoto": "Bokeh",
   "com.miui.gallery": "相册",
   "com.miui.greenguard": "家人守护",
   "com.miui.guardprovider": "系统安全组件",
+  "com.miui.handwriting": "随手写",
   "com.miui.home": "系统桌面",
   "com.miui.huanji": "小米换机",
   "com.miui.hybrid": "快应用服务框架",
@@ -77,6 +79,7 @@
   "com.miui.yellowpage": "生活黄页",
   "com.mobiletools.systemhelper": "SystemHelper",
   "com.sohu.inputmethod.sogou.xiaomi": "搜狗输入法小米版",
+  "com.tencent.soter.soterserver": "SoterService(QCOM)",
   "com.unionpay.tsmservice.mi": "银联可信服务安全组件小米版本",
   "com.xiaomi.ab": "售后支持",
   "com.xiaomi.account": "小米帐号",
@@ -98,12 +101,15 @@
   "com.xiaomi.migameservice": "游戏高能时刻",
   "com.xiaomi.mirror": "跨屏协同服务",
   "com.xiaomi.misettings": "小米设置",
+  "com.xiaomi.mitukid": "米兔儿童",
+  "com.xiaomi.mslgrdp": "PC 框架",
   "com.xiaomi.payment": "米币支付",
   "com.xiaomi.registration": "运营商服务",
   "com.xiaomi.scanner": "小爱视觉",
   "com.xiaomi.simactivate.service": "小米SIM卡激活服务",
   "com.xiaomi.ugd": "GPU 驱动更新",
   "com.xiaomi.vipaccount": "小米社区",
+  "com.xiaomi.wpslauncher": "WPS Office(Linux)",
   "com.xiaomi.xaee": "小爱离线引擎",
   "com.xiaomi.xmsf": "小米服务框架",
   "miui.systemui.plugin": "系统界面组件"
