同步 fold 数据库

--- a/fold/app_code.json
+++ b/fold/app_code.json
@@ -15,6 +15,7 @@
     "com.android.thememanager": 4091,
     "com.android.updater": 823,
     "com.baidu.input_mi": 1803,
+    "com.duokan.phone.remotecontroller": 6342,
     "com.iflytek.inputmethod.miui": 8076,
     "com.mi.health": 317005,
     "com.milink.service": 140040020,
