--- a/fold/app_version.json
+++ b/fold/app_version.json
@@ -15,6 +15,7 @@
     "com.android.thememanager": "4.0.9.1-HD",
     "com.android.updater": "8.2.3",
     "com.baidu.input_mi": "10.6.121.298",
+    "com.duokan.phone.remotecontroller": "6.5.7M",
     "com.iflytek.inputmethod.miui": "8.1.8076",
     "com.mi.health": "3.17.5",
     "com.milink.service": "14.4.2.0.876ac38.2809693",
