mi13p/fold3 1.0.23.11.19.DEV

--- a/app_name.json
+++ b/app_name.json
@@ -64,7 +64,7 @@
   "com.miui.screenshot": "截屏",
   "com.miui.securityadd": "系统服务组件",
   "com.miui.securitycenter": "安全服务",
-  "com.miui.securitycore": "安全核心组件",
+  "com.miui.securitycore": "系统功能组件",
   "com.miui.securityinputmethod": "小米安全键盘",
   "com.miui.securitymanager": "手机管家-Manager",
   "com.miui.themestore": "主题商店",
