--- a/phone/app_code.json
+++ b/phone/app_code.json
@@ -1,110 +1,111 @@
 {
-    "cn.wps.moffice_eng.xiaomi.lite": 350,
-    "com.android.browser": 170802100,
-    "com.android.calendar": 15000008,
-    "com.android.camera": 520005102,
-    "com.android.contacts": 509,
-    "com.android.deskclock": 1303001100,
-    "com.android.email": 1041003,
-    "com.android.fileexplorer": 5020,
-    "com.android.incallui": 934,
-    "com.android.mms": 15000008,
-    "com.android.providers.downloads.ui": 1231011005,
-    "com.android.quicksearchbox": 210030153,
-    "com.android.soundrecorder": 500139,
-    "com.android.thememanager": 4222,
-    "com.android.updater": 843,
-    "com.baidu.input_mi": 3200,
-    "com.duokan.phone.remotecontroller": 6353,
-    "com.iflytek.inputmethod.miui": 8604,
-    "com.mfashiongallery.emag": 2023102900,
-    "com.mi.health": 323003,
-    "com.milink.service": 150010000,
-    "com.mipay.wallet": 20577485,
-    "com.miui.accessibility": 23110110,
-    "com.miui.aod": 21702060,
-    "com.miui.backup": 6510,
-    "com.miui.bugreport": 15000005,
-    "com.miui.core": 1201599,
-    "com.miui.calculator": 315000012,
-    "com.miui.carlink": 101006000,
-    "com.miui.cleanmaster": 100664,
-    "com.miui.cloudbackup": 112010611,
-    "com.miui.cloudservice": 112000170,
-    "com.miui.compass": 1500101,
-    "com.miui.contentcatcher": 20231023,
-    "com.miui.contentextension": 30012,
-    "com.miui.extraphoto": 200040001,
-    "com.miui.gallery": 407554,
-    "com.miui.greenguard": 20230918,
-    "com.miui.guardprovider": 208,
-    "com.miui.home": 439147640,
-    "com.miui.huanji": 41903,
-    "com.miui.hybrid": 11060601,
-    "com.miui.maintenancemode": 16,
-    "com.miui.mediaeditor": 4523364,
-    "com.miui.mediaviewer": 2023103003,
-    "com.miui.miinput": 23090516,
-    "com.miui.miservice": 15000005,
-    "com.miui.mishare.connectivity": 22105,
-    "com.miui.misound": 231030,
-    "com.miui.miwallpaper": 500312000,
-    "com.miui.newhome": 11171,
-    "com.miui.newmidrive": 112000598,
-    "com.miui.nextpay": 1410,
-    "com.miui.notes": 716,
-    "com.miui.notification": 1010608,
-    "com.miui.packageinstaller": 52010,
-    "com.miui.personalassistant": 50901,
-    "com.miui.phrase": 10053,
-    "com.miui.player": 4190003,
-    "com.miui.screenrecorder": 21300051,
-    "com.miui.screenshot": 10400096,
-    "com.miui.securityadd": 91154,
-    "com.miui.securitycore": 40000112,
-    "com.miui.securitycenter": 40000861,
-    "com.miui.securityinputmethod": 323,
-    "com.miui.securitymanager": 10,
-    "com.miui.themestore": 12,
-    "com.miui.thirdappassistant": 1028,
-    "com.miui.touchassistant": 150000091,
-    "com.miui.tsmclient": 1410,
-    "com.miui.uireporter": 20101,
-    "com.miui.video": 2023110790,
-    "com.miui.virtualsim": 655,
-    "com.miui.vpnsdkmanager": 24,
-    "com.miui.weather2": 15000300,
-    "com.miui.yellowpage": 202310130,
-    "com.mobiletools.systemhelper": 3,
-    "com.sohu.inputmethod.sogou.xiaomi": 1900,
-    "com.unionpay.tsmservice.mi": 52,
-    "com.xiaomi.ab": 167,
-    "com.xiaomi.account": 323080708,
-    "com.xiaomi.aireco": 101011020,
-    "com.xiaomi.aiasst.service": 1822,
-    "com.xiaomi.aiasst.vision": 404100001,
-    "com.xiaomi.aicr": 2023111619,
-    "com.xiaomi.barrage": 234,
-    "com.xiaomi.cameratools": 2309260,
-    "com.xiaomi.gamecenter.sdk.service": 8300200,
-    "com.xiaomi.joyose": 304,
-    "com.xiaomi.location.fused": 14000,
-    "com.xiaomi.macro": 31220522,
-    "com.xiaomi.market": 40005261,
-    "com.xiaomi.metoknlp": 14005,
-    "com.xiaomi.mis": 54,
-    "com.xiaomi.mi_connect_service": 3001450,
-    "com.xiaomi.mibrain.speech": 51,
-    "com.xiaomi.migameservice": 69,
-    "com.xiaomi.mirror": 150084,
-    "com.xiaomi.misettings": 231511013,
-    "com.xiaomi.payment": 2003048,
-    "com.xiaomi.registration": 7,
-    "com.xiaomi.scanner": 1322032400,
-    "com.xiaomi.simactivate.service": 1230828,
-    "com.xiaomi.ugd": 120,
-    "com.xiaomi.vipaccount": 230809,
-    "com.xiaomi.xaee": 2,
-    "com.xiaomi.xmsf": 70000001,
-    "miui.systemui.plugin": 150013200
-  }
+  "cn.wps.moffice_eng.xiaomi.lite": 350,
+  "com.android.browser": 170802100,
+  "com.android.calendar": 15000008,
+  "com.android.camera": 520005102,
+  "com.android.contacts": 509,
+  "com.android.deskclock": 1303001300,
+  "com.android.email": 1041003,
+  "com.android.fileexplorer": 5020,
+  "com.android.incallui": 938,
+  "com.android.mms": 15000008,
+  "com.android.providers.downloads.ui": 1231011005,
+  "com.android.quicksearchbox": 210030153,
+  "com.android.soundrecorder": 500139,
+  "com.android.thememanager": 4226,
+  "com.android.updater": 844,
+  "com.baidu.input_mi": 3200,
+  "com.duokan.phone.remotecontroller": 6353,
+  "com.iflytek.inputmethod.miui": 8604,
+  "com.mfashiongallery.emag": 2023102900,
+  "com.mi.health": 323003,
+  "com.milink.service": 150010000,
+  "com.mipay.wallet": 20577485,
+  "com.miui.accessibility": 23110110,
+  "com.miui.aod": 21702064,
+  "com.miui.backup": 6510,
+  "com.miui.bugreport": 15000005,
+  "com.miui.calculator": 315000012,
+  "com.miui.carlink": 101006000,
+  "com.miui.cleanmaster": 100664,
+  "com.miui.cloudbackup": 112010611,
+  "com.miui.cloudservice": 112000170,
+  "com.miui.compass": 1500101,
+  "com.miui.contentcatcher": 20231108,
+  "com.miui.contentextension": 30012,
+  "com.miui.core": 1201599,
+  "com.miui.extraphoto": 200040001,
+  "com.miui.gallery": 407554,
+  "com.miui.greenguard": 920231106,
+  "com.miui.guardprovider": 208,
+  "com.miui.home": 439147640,
+  "com.miui.huanji": 41903,
+  "com.miui.hybrid": 11060601,
+  "com.miui.maintenancemode": 16,
+  "com.miui.mediaeditor": 4523364,
+  "com.miui.mediaviewer": 2023103003,
+  "com.miui.miinput": 23090516,
+  "com.miui.miservice": 15000005,
+  "com.miui.mishare.connectivity": 22105,
+  "com.miui.misound": 231110,
+  "com.miui.miwallpaper": 500314000,
+  "com.miui.newhome": 11171,
+  "com.miui.newmidrive": 112000599,
+  "com.miui.nextpay": 1410,
+  "com.miui.notes": 716,
+  "com.miui.notification": 1010608,
+  "com.miui.packageinstaller": 52010,
+  "com.miui.personalassistant": 50902,
+  "com.miui.phrase": 10053,
+  "com.miui.player": 4190003,
+  "com.miui.screenrecorder": 21300051,
+  "com.miui.screenshot": 10400097,
+  "com.miui.securityadd": 91154,
+  "com.miui.securitycenter": 40000861,
+  "com.miui.securitycore": 40000114,
+  "com.miui.securityinputmethod": 323,
+  "com.miui.securitymanager": 10,
+  "com.miui.themestore": 12,
+  "com.miui.thirdappassistant": 1028,
+  "com.miui.touchassistant": 150000091,
+  "com.miui.tsmclient": 1410,
+  "com.miui.uireporter": 20200,
+  "com.miui.video": 2023110790,
+  "com.miui.virtualsim": 655,
+  "com.miui.vpnsdkmanager": 24,
+  "com.miui.weather2": 15000300,
+  "com.miui.yellowpage": 202310130,
+  "com.mobiletools.systemhelper": 3,
+  "com.sohu.inputmethod.sogou.xiaomi": 1900,
+  "com.tencent.soter.soterserver": 221024,
+  "com.unionpay.tsmservice.mi": 52,
+  "com.xiaomi.ab": 167,
+  "com.xiaomi.account": 323080708,
+  "com.xiaomi.aiasst.service": 1822,
+  "com.xiaomi.aiasst.vision": 404100001,
+  "com.xiaomi.aicr": 2023111619,
+  "com.xiaomi.aireco": 101011020,
+  "com.xiaomi.barrage": 234,
+  "com.xiaomi.cameratools": 2309260,
+  "com.xiaomi.gamecenter.sdk.service": 8300200,
+  "com.xiaomi.joyose": 304,
+  "com.xiaomi.location.fused": 14000,
+  "com.xiaomi.macro": 31220522,
+  "com.xiaomi.market": 40005261,
+  "com.xiaomi.metoknlp": 14005,
+  "com.xiaomi.mi_connect_service": 3001453,
+  "com.xiaomi.mibrain.speech": 51,
+  "com.xiaomi.migameservice": 69,
+  "com.xiaomi.mirror": 150084,
+  "com.xiaomi.mis": 504,
+  "com.xiaomi.misettings": 231511013,
+  "com.xiaomi.payment": 2003048,
+  "com.xiaomi.registration": 7,
+  "com.xiaomi.scanner": 1322032400,
+  "com.xiaomi.simactivate.service": 1230828,
+  "com.xiaomi.ugd": 120,
+  "com.xiaomi.vipaccount": 230809,
+  "com.xiaomi.xaee": 2,
+  "com.xiaomi.xmsf": 70000001,
+  "miui.systemui.plugin": 150013200
+}
