--- a/fold/app_code.json
+++ b/fold/app_code.json
@@ -1,98 +1,107 @@
 {
-    "cn.wps.moffice_eng.xiaomi.lite": 300,
-    "com.android.browser": 140787000,
-    "com.android.calendar": 160020090,
-    "com.android.camera": 500016903,
-    "com.android.contacts": 3048,
-    "com.android.deskclock": 130207700,
-    "com.android.email": 1040002,
-    "com.android.fileexplorer": 4503,
-    "com.android.incallui": 232,
-    "com.android.mms": 140100021,
-    "com.android.providers.downloads.ui": 1230519001,
-    "com.android.quicksearchbox": 20230703,
-    "com.android.soundrecorder": 303149,
-    "com.android.thememanager": 4091,
-    "com.android.updater": 823,
-    "com.baidu.input_mi": 1803,
-    "com.duokan.phone.remotecontroller": 6342,
-    "com.iflytek.inputmethod.miui": 8076,
-    "com.mi.health": 317005,
-    "com.milink.service": 140040020,
-    "com.mipay.wallet": 20577352,
-    "com.miui.accessibility": 23050600,
-    "com.miui.aod": 21101116,
-    "com.miui.bugreport": 3031534,
-    "com.miui.calculator": 301001026,
-    "com.miui.carlink": 101001008,
-    "com.miui.cleanmaster": 100575,
-    "com.miui.cloudbackup": 112010600,
-    "com.miui.cloudservice": 112000120,
-    "com.miui.compass": 1302071,
-    "com.miui.contentextension": 20096,
-    "com.miui.extraphoto": 108040101,
-    "com.miui.gallery": 403652,
-    "com.miui.greenguard": 20230711,
-    "com.miui.guardprovider": 152,
-    "com.miui.home": 439076268,
-    "com.miui.huanji": 41000,
-    "com.miui.hybrid": 11000004,
+    "cn.wps.moffice_eng.xiaomi.lite": 350,
+    "com.android.browser": 140793000,
+    "com.android.calendar": 161500160,
+    "com.android.camera": 510005001,
+    "com.android.contacts": 4004,
+    "com.android.deskclock": 1303001300,
+    "com.android.email": 1041003,
+    "com.android.fileexplorer": 5020,
+    "com.android.incallui": 936,
+    "com.android.mms": 150100012,
+    "com.android.providers.downloads.ui": 1231011005,
+    "com.android.quicksearchbox": 20230909,
+    "com.android.soundrecorder": 500139,
+    "com.android.thememanager": 4221,
+    "com.android.updater": 844,
+    "com.baidu.input_mi": 3180,
+    "com.duokan.phone.remotecontroller": 6353,
+    "com.iflytek.inputmethod.miui": 8110,
+    "com.mi.health": 320004,
+    "com.milink.service": 150000042,
+    "com.mipay.wallet": 20577475,
+    "com.miui.accessibility": 23110110,
+    "com.miui.aod": 21702064,
+    "com.miui.backup": 6510,
+    "com.miui.bugreport": 15000005,
+    "com.miui.calculator": 315000010,
+    "com.miui.carlink": 101005008,
+    "com.miui.cleanmaster": 100664,
+    "com.miui.cloudbackup": 112010611,
+    "com.miui.cloudservice": 112000170,
+    "com.miui.compass": 1500101,
+    "com.miui.contentcatcher": 20231108,
+    "com.miui.contentextension": 30012,
+    "com.miui.core": 1201599,
+    "com.miui.extraphoto": 108070000,
+    "com.miui.gallery": 405516,
+    "com.miui.greenguard": 920231107,
+    "com.miui.guardprovider": 208,
+    "com.miui.home": 439147640,
+    "com.miui.huanji": 41801,
+    "com.miui.hybrid": 11030907,
     "com.miui.maintenancemode": 14,
     "com.miui.mediaeditor": 4396096,
-    "com.miui.mediaviewer": 2023063002,
+    "com.miui.mediaviewer": 2023103003,
     "com.miui.miinput": 23072510,
-    "com.miui.miservice": 14000103,
-    "com.miui.mishare.connectivity": 21600,
-    "com.miui.misound": 230801,
-    "com.miui.miwallpaper": 500198000,
-    "com.miui.newmidrive": 112000586,
-    "com.miui.nextpay": 410,
-    "com.miui.notes": 598,
-    "com.miui.notification": 1010499,
-    "com.miui.packageinstaller": 50941,
-    "com.miui.personalassistant": 50600,
-    "com.miui.phrase": 10037,
-    "com.miui.player": 4160014,
-    "com.miui.screenrecorder": 21207121,
-    "com.miui.screenshot": 10400034,
-    "com.miui.securityadd": 91146,
-    "com.miui.securitycenter": 40000820,
-    "com.miui.securityinputmethod": 303,
-    "com.miui.securitymanager": 9,
-    "com.miui.themestore": 11,
-    "com.miui.thirdappassistant": 1024,
-    "com.miui.touchassistant": 90005081,
-    "com.miui.tsmclient": 1225,
-    "com.miui.uireporter": 20101,
-    "com.miui.video": 2023022090,
+    "com.miui.miservice": 15000002,
+    "com.miui.mishare.connectivity": 22105,
+    "com.miui.misound": 231110,
+    "com.miui.miwallpaper": 500314000,
+    "com.miui.newmidrive": 112000599,
+    "com.miui.nextpay": 1410,
+    "com.miui.notes": 716,
+    "com.miui.notification": 1010608,
+    "com.miui.packageinstaller": 51131,
+    "com.miui.personalassistant": 50902,
+    "com.miui.phrase": 10052,
+    "com.miui.player": 4180200,
+    "com.miui.screenrecorder": 21300051,
+    "com.miui.screenshot": 10400097,
+    "com.miui.securityadd": 91152,
+    "com.miui.securitycenter": 40000861,
+    "com.miui.securitycore": 40000114,
+    "com.miui.securityinputmethod": 323,
+    "com.miui.securitymanager": 10,
+    "com.miui.themestore": 12,
+    "com.miui.thirdappassistant": 1028,
+    "com.miui.touchassistant": 150000091,
+    "com.miui.tsmclient": 1410,
+    "com.miui.uireporter": 20200,
+    "com.miui.video": 2023090790,
     "com.miui.vpnsdkmanager": 23,
-    "com.miui.weather2": 130000034,
-    "com.miui.yellowpage": 202211070,
+    "com.miui.weather2": 150000011,
+    "com.miui.yellowpage": 202310130,
     "com.mobiletools.systemhelper": 3,
-    "com.sohu.inputmethod.sogou.xiaomi": 1824,
+    "com.sohu.inputmethod.sogou.xiaomi": 1900,
     "com.tencent.soter.soterserver": 221024,
     "com.unionpay.tsmservice.mi": 45,
-    "com.xiaomi.account": 323050605,
-    "com.xiaomi.aiasst.service": 1750,
-    "com.xiaomi.aiasst.vision": 402004008,
-    "com.xiaomi.aicr": 4,
-    "com.xiaomi.barrage": 226,
-    "com.xiaomi.cameratools": 2307260,
+    "com.xiaomi.ab": 167,
+    "com.xiaomi.account": 323080708,
+    "com.xiaomi.aiasst.service": 1768,
+    "com.xiaomi.aiasst.vision": 402006002,
+    "com.xiaomi.aicr": 20231109,
+    "com.xiaomi.barrage": 232,
+    "com.xiaomi.cameratools": 2309260,
     "com.xiaomi.gamecenter.sdk.service": 8100602,
-    "com.xiaomi.joyose": 289,
-    "com.xiaomi.location.fused": 13002,
-    "com.xiaomi.macro": 31220422,
+    "com.xiaomi.joyose": 302,
+    "com.xiaomi.location.fused": 14000,
+    "com.xiaomi.macro": 31220522,
     "com.xiaomi.market": 5003061,
-    "com.xiaomi.metoknlp": 13010,
-    "com.xiaomi.mi_connect_service": 265,
+    "com.xiaomi.metoknlp": 14004,
+    "com.xiaomi.mi_connect_service": 3001453,
     "com.xiaomi.mibrain.speech": 51,
-    "com.xiaomi.migameservice": 62,
-    "com.xiaomi.mirror": 30787,
-    "com.xiaomi.misettings": 230512011,
-    "com.xiaomi.payment": 2003043,
-    "com.xiaomi.scanner": 1322032387,
-    "com.xiaomi.simactivate.service": 1230321,
-    "com.xiaomi.vipaccount": 230601,
-    "com.xiaomi.xmsf": 50004010,
-    "miui.systemui.plugin": 140023700
+    "com.xiaomi.migameservice": 63,
+    "com.xiaomi.mirror": 150084,
+    "com.xiaomi.mis": 504,
+    "com.xiaomi.misettings": 231511011,
+    "com.xiaomi.payment": 2003048,
+    "com.xiaomi.registration": 7,
+    "com.xiaomi.scanner": 1322032400,
+    "com.xiaomi.simactivate.service": 1230828,
+    "com.xiaomi.ugd": 120,
+    "com.xiaomi.vipaccount": 230612,
+    "com.xiaomi.xaee": 2,
+    "com.xiaomi.xmsf": 70000001,
+    "miui.systemui.plugin": 150013200
 }
