--- a/fold/app_version.json
+++ b/fold/app_version.json
@@ -1,98 +1,107 @@
 {
-    "cn.wps.moffice_eng.xiaomi.lite": "3.0.0",
-    "com.android.browser": "14.7.87",
-    "com.android.calendar": "16.0.20.9-HD",
-    "com.android.camera": "5.0.001690.3",
-    "com.android.contacts": "12.3.0.48",
-    "com.android.deskclock": "13.77.0",
-    "com.android.email": "V13_20230721_b2",
-    "com.android.fileexplorer": "4.5.0.3",
-    "com.android.incallui": "2.2.26",
-    "com.android.mms": "14.1.0.21",
-    "com.android.providers.downloads.ui": "123.05.19.800001",
-    "com.android.quicksearchbox": "9.1.9.5",
-    "com.android.soundrecorder": "3.3.14.9",
-    "com.android.thememanager": "4.0.9.1-HD",
-    "com.android.updater": "8.2.3",
-    "com.baidu.input_mi": "10.6.121.298",
-    "com.duokan.phone.remotecontroller": "6.5.7M",
-    "com.iflytek.inputmethod.miui": "8.1.8076",
-    "com.mi.health": "3.17.5",
-    "com.milink.service": "14.4.2.0.876ac38.2809693",
-    "com.mipay.wallet": "6.32.1.4327.1963",
-    "com.miui.accessibility": "5.12.0",
-    "com.miui.aod": "RELEASE-2.11.1116-06261036",
-    "com.miui.bugreport": "3.3.15.34",
-    "com.miui.calculator": "13.1.26",
-    "com.miui.carlink": "1.1.8-20230517",
-    "com.miui.cleanmaster": "575.0.230519.release",
-    "com.miui.cloudbackup": "1.12.1.6.0",
-    "com.miui.cloudservice": "1.12.0.1.20",
-    "com.miui.compass": "13.2.7.1",
-    "com.miui.contentextension": "2.5.96",
-    "com.miui.extraphoto": "1.8.4.1.1",
-    "com.miui.gallery": "3.5.6.4",
-    "com.miui.greenguard": "3.8.07.10-fold",
-    "com.miui.guardprovider": "1.5.0-20221228.0",
-    "com.miui.home": "RELEASE-4.39.7.6268-10201745",
-    "com.miui.huanji": "4.1.0",
-    "com.miui.hybrid": "1.10.0.0",
+    "cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
+    "com.android.browser": "14.7.93",
+    "com.android.calendar": "16.15.0.16-HD",
+    "com.android.camera": "5.1.000500.1",
+    "com.android.contacts": "15.4.0.04",
+    "com.android.deskclock": "15.13.0",
+    "com.android.email": "V13_20230919_d3",
+    "com.android.fileexplorer": "5.0.2.0",
+    "com.android.incallui": "3.2.41",
+    "com.android.mms": "15.1.0.12",
+    "com.android.providers.downloads.ui": "123.10.11.800005",
+    "com.android.quicksearchbox": "10.0.0.1",
+    "com.android.soundrecorder": "5.0.13.9",
+    "com.android.thememanager": "4.2.2.1-HD",
+    "com.android.updater": "8.4.4",
+    "com.baidu.input_mi": "10.6.122.185",
+    "com.duokan.phone.remotecontroller": "6.6.7M",
+    "com.iflytek.inputmethod.miui": "8.1.8110",
+    "com.mi.health": "3.20.4",
+    "com.milink.service": "15.0.4.2.faa5aed.2899934",
+    "com.mipay.wallet": "6.63.0.4892.2152",
+    "com.miui.accessibility": "6.1.2",
+    "com.miui.aod": "DEV-2.17.2064-11162024",
+    "com.miui.backup": "6.5.1.0",
+    "com.miui.bugreport": "15.0.0.5",
+    "com.miui.calculator": "15.0.10",
+    "com.miui.carlink": "1.5.8-20231013",
+    "com.miui.cleanmaster": "664.0.231007.release",
+    "com.miui.cloudbackup": "1.12.1.6.11",
+    "com.miui.cloudservice": "1.12.0.1.70",
+    "com.miui.compass": "15.0.10.1",
+    "com.miui.contentcatcher": "1.0.004",
+    "com.miui.contentextension": "3.1.2",
+    "com.miui.core": "1.20.1.5",
+    "com.miui.extraphoto": "1.8.7.0.0",
+    "com.miui.gallery": "3.6.0.12",
+    "com.miui.greenguard": "3.9.11.06-fold",
+    "com.miui.guardprovider": "2.0.2-20231103.0",
+    "com.miui.home": "RELEASE-4.39.14.7640-11102019",
+    "com.miui.huanji": "4.1.8.1",
+    "com.miui.hybrid": "1.10.3.9",
     "com.miui.maintenancemode": "3.1.2",
     "com.miui.mediaeditor": "1.3.5.2",
-    "com.miui.mediaviewer": "v2023063002(MediaViewer-ROM)",
+    "com.miui.mediaviewer": "v2023103003(MediaViewer-ROM)",
     "com.miui.miinput": "RELEASE-1.0.2307251043",
-    "com.miui.miservice": "14.0.1.3",
-    "com.miui.mishare.connectivity": "2.16.0",
+    "com.miui.miservice": "15.0.0.2",
+    "com.miui.mishare.connectivity": "2.21.5",
     "com.miui.misound": "2.0",
-    "com.miui.miwallpaper": "1.9.8-ALPHA-07281545",
-    "com.miui.newmidrive": "1.12.0.5.86",
-    "com.miui.nextpay": "23.03.29.1",
-    "com.miui.notes": "5.9.8",
-    "com.miui.notification": "1.1.4.99",
-    "com.miui.packageinstaller": "5.0.9.4-20230529F",
-    "com.miui.personalassistant": "5.6.0-06131937",
-    "com.miui.phrase": "3.3.7",
-    "com.miui.player": "4.16.0.14-fold",
-    "com.miui.screenrecorder": "2.12.7.12.1",
-    "com.miui.screenshot": "RELEASE-1.4.34-12151541",
-    "com.miui.securityadd": "9.11.46-230804.0.1",
-    "com.miui.securitycenter": "8.2.0-230828.0.2",
-    "com.miui.securityinputmethod": "3.0.3",
-    "com.miui.securitymanager": "9.0",
-    "com.miui.themestore": "11.0",
-    "com.miui.thirdappassistant": "4.1",
-    "com.miui.touchassistant": "9.0.5.8.1",
-    "com.miui.tsmclient": "23.06.26.1.f",
-    "com.miui.uireporter": "2.1.1",
-    "com.miui.video": "v2023022090(MiVideo-ROM)",
+    "com.miui.miwallpaper": "3.1.4-ALPHA-11091031",
+    "com.miui.newmidrive": "1.12.0.5.99",
+    "com.miui.nextpay": "23.11.01.1",
+    "com.miui.notes": "7.1.6",
+    "com.miui.notification": "1.1.6.8",
+    "com.miui.packageinstaller": "5.1.1.3.1-20230725F",
+    "com.miui.personalassistant": "5.9.2-11102059",
+    "com.miui.phrase": "3.5.2",
+    "com.miui.player": "4.18.2.0-pad",
+    "com.miui.screenrecorder": "2.13.0.5.1",
+    "com.miui.screenshot": "RELEASE-1.4.97-11131423",
+    "com.miui.securityadd": "9.11.52-231030.0.1",
+    "com.miui.securitycenter": "8.6.1-231103.0.1",
+    "com.miui.securitycore": "1.1.4-15-231110",
+    "com.miui.securityinputmethod": "3.2.3",
+    "com.miui.securitymanager": "10.0",
+    "com.miui.themestore": "12.0",
+    "com.miui.thirdappassistant": "4.5",
+    "com.miui.touchassistant": "15.0.0.9.1",
+    "com.miui.tsmclient": "23.11.01.1.f",
+    "com.miui.uireporter": "2.2.0",
+    "com.miui.video": "v2023090790(MiVideo-ROM)",
     "com.miui.vpnsdkmanager": "23",
-    "com.miui.weather2": "13.0.3.4-HD",
-    "com.miui.yellowpage": "202211070",
+    "com.miui.weather2": "15.0.1.1-HD",
+    "com.miui.yellowpage": "15.202310130",
     "com.mobiletools.systemhelper": "1.2-20230424",
-    "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202307061928",
+    "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202310202015",
     "com.tencent.soter.soterserver": "1.0.221024.2",
     "com.unionpay.tsmservice.mi": "01.00.44",
-    "com.xiaomi.account": "R-23.05.06.05",
-    "com.xiaomi.aiasst.service": "5.4.0",
-    "com.xiaomi.aiasst.vision": "4.4.8",
-    "com.xiaomi.aicr": "1.0.4",
-    "com.xiaomi.barrage": "2.0.7.230420",
-    "com.xiaomi.cameratools": "23.07.26.0",
+    "com.xiaomi.ab": "3.0.1.20231020",
+    "com.xiaomi.account": "R-23.08.07.08",
+    "com.xiaomi.aiasst.service": "5.6.0",
+    "com.xiaomi.aiasst.vision": "4.6.2",
+    "com.xiaomi.aicr": "2.0",
+    "com.xiaomi.barrage": "2.0.9",
+    "com.xiaomi.cameratools": "23.09.26.0",
     "com.xiaomi.gamecenter.sdk.service": "8.1.6.2",
-    "com.xiaomi.joyose": "2.2.89",
-    "com.xiaomi.location.fused": "3.0.2",
-    "com.xiaomi.macro": "2.2.3.S",
+    "com.xiaomi.joyose": "2.3.02",
+    "com.xiaomi.location.fused": "4.0.0",
+    "com.xiaomi.macro": "2.2.4.S",
     "com.xiaomi.market": "5.4.1",
-    "com.xiaomi.metoknlp": "5.0.10",
-    "com.xiaomi.mi_connect_service": "2.14.107",
+    "com.xiaomi.metoknlp": "6.0.4",
+    "com.xiaomi.mi_connect_service": "3.1.453.10",
     "com.xiaomi.mibrain.speech": "1.5.1",
-    "com.xiaomi.migameservice": "0.6.2",
-    "com.xiaomi.mirror": "3.7.87",
-    "com.xiaomi.misettings": "2.9.9.54-fold",
-    "com.xiaomi.payment": "2.6.2",
-    "com.xiaomi.scanner": "15.1.0",
-    "com.xiaomi.simactivate.service": "R-23.03.21",
-    "com.xiaomi.vipaccount": "4.4.2.P",
-    "com.xiaomi.xmsf": "5.4.10",
-    "miui.systemui.plugin": "14.0.2.37.0"
+    "com.xiaomi.migameservice": "0.6.3",
+    "com.xiaomi.mirror": "15.00.84",
+    "com.xiaomi.mis": "0.5.4-2023110115",
+    "com.xiaomi.misettings": "2.9.9.67-fold",
+    "com.xiaomi.payment": "2.7.2",
+    "com.xiaomi.registration": "4.0.2",
+    "com.xiaomi.scanner": "15.5.1",
+    "com.xiaomi.simactivate.service": "R-23.08.28",
+    "com.xiaomi.ugd": "1.2.0",
+    "com.xiaomi.vipaccount": "4.4.5.P",
+    "com.xiaomi.xaee": "0.2",
+    "com.xiaomi.xmsf": "7.0.1-C",
+    "miui.systemui.plugin": "15.0.1.32.0"
 }
