fold2/phone OS1.0.23.11.21.DEV

--- a/fold/app_version.json
+++ b/fold/app_version.json
@@ -69,10 +69,10 @@
     "com.miui.tsmclient": "23.11.01.1.f",
     "com.miui.uireporter": "2.2.0",
     "com.miui.video": "v2023090790(MiVideo-ROM)",
-    "com.miui.vpnsdkmanager": "23",
+    "com.miui.vpnsdkmanager": "24",
     "com.miui.weather2": "15.0.1.1-HD",
     "com.miui.yellowpage": "15.202310130",
-    "com.mobiletools.systemhelper": "1.2-20230424",
+    "com.mobiletools.systemhelper": "1.2-20230815",
     "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202310202015",
     "com.tencent.soter.soterserver": "1.0.221024.2",
     "com.unionpay.tsmservice.mi": "01.00.44",
@@ -91,7 +91,7 @@
     "com.xiaomi.metoknlp": "6.0.4",
     "com.xiaomi.mi_connect_service": "3.1.453.10",
     "com.xiaomi.mibrain.speech": "1.5.1",
-    "com.xiaomi.migameservice": "0.6.3",
+    "com.xiaomi.migameservice": "0.6.9-B",
     "com.xiaomi.mirror": "15.00.84",
     "com.xiaomi.mis": "0.5.4-2023110115",
     "com.xiaomi.misettings": "2.9.9.67-fold",
