--- a/phone/app_version.json
+++ b/phone/app_version.json
@@ -2,7 +2,7 @@
   "cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
   "com.android.browser": "17.8.211101",
   "com.android.calendar": "15.0.0.8",
-  "com.android.camera": "5.2.000560.1",
+  "com.android.camera": "5.2.000580.2",
   "com.android.contacts": "15.0.0.9",
   "com.android.deskclock": "15.13.0",
   "com.android.email": "V13_20230919_d3",
@@ -21,7 +21,7 @@
   "com.mi.health": "3.23.3",
   "com.milink.service": "15.1.0.1.bcc1f122.2912291",
   "com.mipay.wallet": "6.65.1.4924.2152",
-  "com.miui.accessibility": "6.1.2",
+  "com.miui.accessibility": "6.1.3",
   "com.miui.aod": "DEV-2.17.2064-11162024",
   "com.miui.backup": "6.5.1.0",
   "com.miui.bugreport": "15.0.0.5",
@@ -60,8 +60,8 @@
   "com.miui.player": "4.19.0.3",
   "com.miui.screenrecorder": "2.13.0.5.1",
   "com.miui.screenshot": "RELEASE-1.4.97-11131423",
-  "com.miui.securityadd": "9.11.54-231108.0.1",
-  "com.miui.securitycenter": "8.6.1-231103.0.1",
+  "com.miui.securityadd": "9.11.54-231111.0.1",
+  "com.miui.securitycenter": "8.6.4-231117.0.1",
   "com.miui.securitycore": "1.1.4-15-231110",
   "com.miui.securityinputmethod": "3.2.3",
   "com.miui.securitymanager": "10.0",
@@ -75,7 +75,7 @@
   "com.miui.vpnsdkmanager": "24",
   "com.miui.weather2": "15.0.3.0",
   "com.miui.yellowpage": "15.202310130",
-  "com.mobiletools.systemhelper": "1.2-20230925-U",
+  "com.mobiletools.systemhelper": "3.0.0-20231027",
   "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202310202015",
   "com.tencent.soter.soterserver": "1.0.221024.2",
   "com.unionpay.tsmservice.mi": "01.00.51",
@@ -85,10 +85,10 @@
   "com.xiaomi.aiasst.vision": "4.100.1",
   "com.xiaomi.aicr": "2.0",
   "com.xiaomi.aireco": "1.11.20.a9hs",
-  "com.xiaomi.barrage": "2.0.9.230705",
-  "com.xiaomi.cameratools": "23.09.26.0",
+  "com.xiaomi.barrage": "3.0.0.231024",
+  "com.xiaomi.cameratools": "23.11.09.1",
   "com.xiaomi.gamecenter.sdk.service": "8.3.2",
-  "com.xiaomi.joyose": "2.3.05",
+  "com.xiaomi.joyose": "2.3.06",
   "com.xiaomi.location.fused": "4.0.0",
   "com.xiaomi.macro": "2.2.4.S",
   "com.xiaomi.market": "4.61.1",
@@ -107,5 +107,5 @@
   "com.xiaomi.vipaccount": "4.6.0",
   "com.xiaomi.xaee": "0.2",
   "com.xiaomi.xmsf": "7.0.1-C",
-  "miui.systemui.plugin": "15.0.1.32.0"
+  "miui.systemui.plugin": "15.0.1.32.1"
 }
