--- a/app_name.json
+++ b/app_name.json
@@ -79,7 +79,7 @@
   "com.miui.yellowpage": "生活黄页",
   "com.mobiletools.systemhelper": "SystemHelper",
   "com.sohu.inputmethod.sogou.xiaomi": "搜狗输入法小米版",
-  "com.tencent.soter.soterserver": "SoterService(QCOM)",
+  "com.tencent.soter.soterserver": "SoterService",
   "com.unionpay.tsmservice.mi": "银联可信服务安全组件小米版本",
   "com.xiaomi.ab": "售后支持",
   "com.xiaomi.account": "小米帐号",
