刷新离线数据库

--- a/pad/app_code.json
+++ b/pad/app_code.json
@@ -1,86 +1,99 @@
 {
-    "cn.wps.moffice_eng.xiaomi.lite": 330,
-    "com.android.browser": 140787000,
-    "com.android.calendar": 160020080,
-    "com.android.camera": 500013502,
-    "com.android.contacts": 1078,
-    "com.android.deskclock": 130208100,
-    "com.android.email": 1040001,
-    "com.android.fileexplorer": 4508,
-    "com.android.incallui": 203,
-    "com.android.providers.downloads.ui": 1230519701,
-    "com.android.quicksearchbox": 20230830,
-    "com.android.soundrecorder": 303149,
-    "com.android.thememanager": 4073,
-    "com.android.updater": 816,
-    "com.milink.service": 140040012,
-    "com.mipay.wallet": 20577420,
-    "com.miui.accessibility": 23050600,
-    "com.miui.bugreport": 3031534,
-    "com.miui.calculator": 301001027,
-    "com.miui.cleanmaster": 100655,
-    "com.miui.cloudbackup": 112010600,
-    "com.miui.cloudservice": 112000120,
-    "com.miui.creation": 12,
-    "com.miui.extraphoto": 108040101,
-    "com.miui.gallery": 403652,
-    "com.miui.greenguard": 20230723,
-    "com.miui.guardprovider": 152,
-    "com.miui.handwriting": 23070714,
-    "com.miui.home": 440006142,
-    "com.miui.huanji": 41000,
-    "com.miui.hybrid": 11000004,
+    "cn.wps.moffice_eng.xiaomi.lite": 350,
+    "com.android.browser": 140793000,
+    "com.android.calendar": 161500170,
+    "com.android.camera": 510006303,
+    "com.android.contacts": 2003,
+    "com.android.deskclock": 1303001300,
+    "com.android.email": 1041003,
+    "com.android.fileexplorer": 5022,
+    "com.android.incallui": 923,
+    "com.android.providers.downloads.ui": 1231011706,
+    "com.android.quicksearchbox": 20231124,
+    "com.android.soundrecorder": 500139,
+    "com.android.thememanager": 4229,
+    "com.android.updater": 845,
+    "com.baidu.input_mi": 3180,
+    "com.iflytek.inputmethod.miui": 8110,
+    "com.milink.service": 150000050,
+    "com.mipay.wallet": 20577475,
+    "com.miui.accessibility": 23110310,
+    "com.miui.aod": 21702079,
+    "com.miui.backup": 6515,
+    "com.miui.bugreport": 15000005,
+    "com.miui.calculator": 315000010,
+    "com.miui.cit": 45,
+    "com.miui.cleanmaster": 100764,
+    "com.miui.cloudbackup": 112010616,
+    "com.miui.cloudservice": 112000170,
+    "com.miui.contentcatcher": 20231108,
+    "com.miui.core": 1201599,
+    "com.miui.creation": 35,
+    "com.miui.extraphoto": 108070000,
+    "com.miui.gallery": 405517,
+    "com.miui.greenguard": 920231108,
+    "com.miui.guardprovider": 209,
+    "com.miui.handwriting": 23120517,
+    "com.miui.home": 440006902,
+    "com.miui.huanji": 42000,
+    "com.miui.hybrid": 11030907,
     "com.miui.maintenancemode": 16,
-    "com.miui.mediaeditor": 4394016,
-    "com.miui.mediaviewer": 2023053002,
+    "com.miui.mediaeditor": 4396096,
+    "com.miui.mediaviewer": 2023103003,
     "com.miui.miinput": 23090516,
-    "com.miui.miservice": 14000108,
-    "com.miui.mishare.connectivity": 21600,
-    "com.miui.misound": 230801,
-    "com.miui.miwallpaper": 500198000,
-    "com.miui.newmidrive": 112000586,
-    "com.miui.notes": 600,
-    "com.miui.notification": 1010493,
-    "com.miui.packageinstaller": 51512,
-    "com.miui.personalassistant": 50579,
-    "com.miui.phrase": 10034,
-    "com.miui.player": 4160018,
-    "com.miui.screenrecorder": 21207061,
-    "com.miui.screenshot": 10400059,
-    "com.miui.securityadd": 91146,
-    "com.miui.securitycenter": 40010809,
-    "com.miui.securityinputmethod": 208,
-    "com.miui.securitymanager": 7,
-    "com.miui.thirdappassistant": 1024,
-    "com.miui.uireporter": 20100,
-    "com.miui.video": 2023022415,
-    "com.miui.vpnsdkmanager": 23,
-    "com.miui.weather2": 130000033,
-    "com.miui.yellowpage": 202303230,
-    "com.sohu.inputmethod.sogou.xiaomi": 1852,
+    "com.miui.miservice": 15000002,
+    "com.miui.mishare.connectivity": 22105,
+    "com.miui.misound": 231211,
+    "com.miui.miwallpaper": 500317000,
+    "com.miui.newmidrive": 112000599,
+    "com.miui.notes": 716,
+    "com.miui.notification": 1010609,
+    "com.miui.packageinstaller": 51542,
+    "com.miui.personalassistant": 50585,
+    "com.miui.phrase": 10054,
+    "com.miui.player": 4190203,
+    "com.miui.screenrecorder": 21300071,
+    "com.miui.screenshot": 10400097,
+    "com.miui.securityadd": 91156,
+    "com.miui.securitycenter": 40010873,
+    "com.miui.securityinputmethod": 323,
+    "com.miui.securitymanager": 10,
+    "com.miui.securitycore": 40000114,
+    "com.miui.thirdappassistant": 1028,
+    "com.miui.uireporter": 20201,
+    "com.miui.video": 2023090990,
+    "com.miui.voiceassist": 506051001,
+    "com.miui.vpnsdkmanager": 24,
+    "com.miui.weather2": 150000013,
+    "com.miui.yellowpage": 202311140,
+    "com.sohu.inputmethod.sogou.xiaomi": 1918,
     "com.tencent.soter.soterserver": 221024,
-    "com.xiaomi.account": 323050605,
-    "com.xiaomi.aiasst.vision": 401005000,
-    "com.xiaomi.aicr": 4,
+    "com.xiaomi.ab": 167,
+    "com.xiaomi.account": 323080708,
+    "com.xiaomi.aiasst.vision": 401006002,
+    "com.xiaomi.aicr": 20231122,
     "com.xiaomi.barrage": 232,
-    "com.xiaomi.cameratools": 2306060,
+    "com.xiaomi.cameratools": 2309260,
     "com.xiaomi.gamecenter.sdk.service": 8100602,
-    "com.xiaomi.joyose": 262,
-    "com.xiaomi.location.fused": 13002,
-    "com.xiaomi.macro": 31220422,
-    "com.xiaomi.market": 8002060,
-    "com.xiaomi.metoknlp": 13006,
-    "com.xiaomi.mi_connect_service": 265,
+    "com.xiaomi.joyose": 302,
+    "com.xiaomi.location.fused": 14000,
+    "com.xiaomi.macro": 31220522,
+    "com.xiaomi.market": 8002100,
+    "com.xiaomi.metoknlp": 14004,
+    "com.xiaomi.mi_connect_service": 3001453,
     "com.xiaomi.mibrain.speech": 51,
-    "com.xiaomi.migameservice": 66,
-    "com.xiaomi.mirror": 30788,
-    "com.xiaomi.misettings": 230629012,
-    "com.xiaomi.mitukid": 2023082310,
+    "com.xiaomi.migameservice": 70,
+    "com.xiaomi.mirror": 150086,
+    "com.xiaomi.mis": 507,
+    "com.xiaomi.misettings": 231511012,
+    "com.xiaomi.mitukid": 2023102511,
     "com.xiaomi.mslgrdp": 110,
-    "com.xiaomi.payment": 2003043,
-    "com.xiaomi.scanner": 1322032387,
-    "com.xiaomi.vipaccount": 230601,
+    "com.xiaomi.payment": 2003048,
+    "com.xiaomi.scanner": 1322032400,
+    "com.xiaomi.ugd": 120,
+    "com.xiaomi.vipaccount": 230613,
     "com.xiaomi.wpslauncher": 110,
-    "com.xiaomi.xmsf": 50004010,
-    "miui.systemui.plugin": 140014101
+    "com.xiaomi.xaee": 2,
+    "com.xiaomi.xmsf": 70000001,
+    "miui.systemui.plugin": 150013200
 }
