--- a/pad/app_version.json
+++ b/pad/app_version.json
@@ -1,86 +1,99 @@
 {
-    "cn.wps.moffice_eng.xiaomi.lite": "3.3.0",
-    "com.android.browser": "14.7.87",
-    "com.android.calendar": "16.0.20.8-HD",
-    "com.android.camera": "5.0.001350.2",
-    "com.android.contacts": "12.1.0.78",
-    "com.android.deskclock": "13.81.0",
-    "com.android.email": "V13_20230721_b1",
-    "com.android.fileexplorer": "4.5.0.8",
-    "com.android.incallui": "1.1.18",
-    "com.android.providers.downloads.ui": "123.05.19.807001",
-    "com.android.quicksearchbox": "9.1.11.0",
-    "com.android.soundrecorder": "3.3.14.9",
-    "com.android.thememanager": "4.0.7.3-HD",
-    "com.android.updater": "8.1.6",
-    "com.milink.service": "14.4.1.2.515d828.2748252",
-    "com.mipay.wallet": "6.49.1.4754.2042",
-    "com.miui.accessibility": "5.12.0",
-    "com.miui.bugreport": "3.3.15.34",
-    "com.miui.calculator": "13.1.27",
-    "com.miui.cleanmaster": "655.0.230720.release",
-    "com.miui.cloudbackup": "1.12.1.6.0",
-    "com.miui.cloudservice": "1.12.0.1.20",
-    "com.miui.creation": "0.1.2",
-    "com.miui.extraphoto": "1.8.4.1.1",
-    "com.miui.gallery": "3.5.6.4",
-    "com.miui.greenguard": "3.8.07.21-tablet",
-    "com.miui.guardprovider": "1.5.0-20221228.0",
-    "com.miui.handwriting": "RELEASE-1.0.2307071419",
-    "com.miui.home": "RELEASE-4.40.0.6142-09081043",
-    "com.miui.huanji": "4.1.0",
-    "com.miui.hybrid": "1.10.0.0",
-    "com.miui.maintenancemode": "3.1.4",
-    "com.miui.mediaeditor": "1.3.3.1",
-    "com.miui.mediaviewer": "v2023053002(MediaViewer-ROM)",
-    "com.miui.miinput": "RELEASE-1.0.2309051646",
-    "com.miui.miservice": "14.0.1.8.pad",
-    "com.miui.mishare.connectivity": "2.16.0",
-    "com.miui.misound": "2.0",
-    "com.miui.miwallpaper": "1.9.8-ALPHA-07281545",
-    "com.miui.newmidrive": "1.12.0.5.86",
-    "com.miui.notes": "6.0.0",
-    "com.miui.notification": "1.1.4.93",
-    "com.miui.packageinstaller": "5.1.5.1-20230621P",
-    "com.miui.personalassistant": "5.5.79-06301441",
-    "com.miui.phrase": "3.3.4",
-    "com.miui.player": "4.16.0.18-pad",
-    "com.miui.screenrecorder": "2.12.7.6.1",
-    "com.miui.screenshot": "RELEASE-1.4.59-07041844",
-    "com.miui.securityadd": "9.11.46-230804.0.1",
-    "com.miui.securitycenter": "8.0.9-230901.0.2.pad",
-    "com.miui.securityinputmethod": "2.0.8",
-    "com.miui.securitymanager": "7.0",
-    "com.miui.thirdappassistant": "4.1",
-    "com.miui.uireporter": "2.1.0",
-    "com.miui.video": "v2023022415(MiVideo-ROM)",
-    "com.miui.vpnsdkmanager": "23",
-    "com.miui.weather2": "13.0.3.3-HD",
-    "com.miui.yellowpage": "202303230",
-    "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202308282141",
-    "com.tencent.soter.soterserver": "1.0.221024.2",
-    "com.xiaomi.account": "R-23.05.06.05",
-    "com.xiaomi.aiasst.vision": "4.5.0",
-    "com.xiaomi.aicr": "1.0.4",
-    "com.xiaomi.barrage": "2.0.9",
-    "com.xiaomi.cameratools": "23.06.06.0",
-    "com.xiaomi.gamecenter.sdk.service": "8.1.6.2",
-    "com.xiaomi.joyose": "2.2.62",
-    "com.xiaomi.location.fused": "3.0.2",
-    "com.xiaomi.macro": "2.2.3.S",
-    "com.xiaomi.market": "8.2.6",
-    "com.xiaomi.metoknlp": "5.0.6",
-    "com.xiaomi.mi_connect_service": "2.14.107",
-    "com.xiaomi.mibrain.speech": "1.5.1",
-    "com.xiaomi.migameservice": "0.6.6-B",
-    "com.xiaomi.mirror": "3.7.88.c",
-    "com.xiaomi.misettings": "2.9.9.56-pad",
-    "com.xiaomi.mitukid": "2.0.1",
-    "com.xiaomi.mslgrdp": "1.1.0",
-    "com.xiaomi.payment": "2.6.2",
-    "com.xiaomi.scanner": "15.1.0",
-    "com.xiaomi.vipaccount": "4.4.2.P",
-    "com.xiaomi.wpslauncher": "1.1.0",
-    "com.xiaomi.xmsf": "5.4.10",
-    "miui.systemui.plugin": "14.0.1.41.1"
+	"cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
+	"com.android.browser": "14.7.93",
+	"com.android.calendar": "16.15.0.17-HD",
+	"com.android.camera": "5.1.000630.3",
+	"com.android.contacts": "15.2.0.03",
+	"com.android.deskclock": "15.13.0",
+	"com.android.email": "V13_20230919_d3",
+	"com.android.fileexplorer": "5.0.2.2",
+	"com.android.incallui": "3.1.37",
+	"com.android.providers.downloads.ui": "123.10.11.807006",
+	"com.android.quicksearchbox": "10.0.0.6",
+	"com.android.soundrecorder": "5.0.13.9",
+	"com.android.thememanager": "4.2.2.9-HD",
+	"com.android.updater": "8.4.5",
+    "com.baidu.input_mi": "10.6.122.185",
+    "com.iflytek.inputmethod.miui": "8.1.8110",
+	"com.milink.service": "15.0.5.0.ceaac61.2919843",
+	"com.mipay.wallet": "6.63.0.4892.2152",
+	"com.miui.accessibility": "6.1.3",
+    "com.miui.aod": "DEV-PAD-2.17.2079-12051038",
+    "com.miui.backup": "6.5.1.5",
+	"com.miui.bugreport": "15.0.0.5",
+	"com.miui.calculator": "15.0.10",
+    "com.miui.cit": "0.4.7-SNAPSHOT",
+	"com.miui.cleanmaster": "764.0.231007.release",
+	"com.miui.cloudbackup": "1.12.1.6.16",
+	"com.miui.cloudservice": "1.12.0.1.70",
+    "com.miui.contentcatcher": "1.0.004",
+    "com.miui.core": "1.20.1.5",
+	"com.miui.creation": "0.3.5",
+	"com.miui.extraphoto": "1.8.7.0.0",
+	"com.miui.gallery": "3.6.0.13",
+	"com.miui.greenguard": "3.9.11.06-tablet",
+	"com.miui.guardprovider": "2.0.3-20231124.0",
+	"com.miui.handwriting": "RELEASE-1.0.2312051740",
+	"com.miui.home": "RELEASE-4.40.0.6902-12071018",
+	"com.miui.huanji": "4.2.0",
+	"com.miui.hybrid": "1.10.3.9",
+	"com.miui.maintenancemode": "3.1.4",
+	"com.miui.mediaeditor": "1.3.5.2",
+	"com.miui.mediaviewer": "v2023103003(MediaViewer-ROM)",
+	"com.miui.miinput": "RELEASE-1.0.2309051646",
+	"com.miui.miservice": "15.0.0.2",
+	"com.miui.mishare.connectivity": "2.21.5",
+	"com.miui.misound": "2.0",
+	"com.miui.miwallpaper": "3.1.7-ALPHA-11242128",
+	"com.miui.newmidrive": "1.12.0.5.99",
+	"com.miui.notes": "7.1.6",
+	"com.miui.notification": "1.1.6.9",
+	"com.miui.packageinstaller": "5.1.5.4.2-20230725P",
+	"com.miui.personalassistant": "5.5.85-11301432",
+	"com.miui.phrase": "3.5.4",
+	"com.miui.player": "4.19.2.3-pad",
+	"com.miui.screenrecorder": "2.13.0.7.1",
+	"com.miui.screenshot": "RELEASE-1.4.97-11131423",
+	"com.miui.securityadd": "9.11.56-231206.0.1",
+	"com.miui.securitycenter": "8.7.3-231209.0.1.pad",
+    "com.miui.securitycore": "1.1.4-15-231129.pad",
+	"com.miui.securityinputmethod": "3.2.3",
+	"com.miui.securitymanager": "10.0",
+	"com.miui.thirdappassistant": "4.5",
+	"com.miui.uireporter": "2.2.1",
+	"com.miui.video": "v2023090990(MiVideo-ROM)",
+    "com.miui.voiceassist": "6.51.1.1709",
+	"com.miui.vpnsdkmanager": "24",
+	"com.miui.weather2": "15.0.1.3-HD",
+	"com.miui.yellowpage": "15.202311140",
+	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202311172024",
+	"com.tencent.soter.soterserver": "1.0.221024.2",
+    "com.xiaomi.ab": "3.0.1.20231020",
+	"com.xiaomi.account": "R-23.08.07.08",
+	"com.xiaomi.aiasst.vision": "4.6.2",
+	"com.xiaomi.aicr": "2.0",
+	"com.xiaomi.barrage": "2.0.9",
+	"com.xiaomi.cameratools": "23.09.26.0",
+	"com.xiaomi.gamecenter.sdk.service": "8.1.6.2",
+	"com.xiaomi.joyose": "2.3.02",
+	"com.xiaomi.location.fused": "4.0.0",
+	"com.xiaomi.macro": "2.2.4.S",
+	"com.xiaomi.market": "8.3.0",
+	"com.xiaomi.metoknlp": "6.0.4",
+	"com.xiaomi.mi_connect_service": "3.1.453.10",
+	"com.xiaomi.mibrain.speech": "1.5.1",
+	"com.xiaomi.migameservice": "0.7.0-B",
+	"com.xiaomi.mirror": "15.00.86.a",
+    "com.xiaomi.mis": "0.5.7-2023112215",
+	"com.xiaomi.misettings": "2.9.9.67-pad",
+	"com.xiaomi.mitukid": "2.0.2",
+	"com.xiaomi.mslgrdp": "1.1.0",
+	"com.xiaomi.payment": "2.7.2",
+	"com.xiaomi.scanner": "15.5.1",
+    "com.xiaomi.ugd": "1.2.0",
+	"com.xiaomi.vipaccount": "4.4.6.P",
+	"com.xiaomi.wpslauncher": "1.1.0",
+    "com.xiaomi.xaee": "0.2",
+	"com.xiaomi.xmsf": "7.0.1-C",
+	"miui.systemui.plugin": "15.0.1.32.0"
 }
