--- a/phone/app_version.json
+++ b/phone/app_version.json
@@ -1,111 +1,111 @@
 {
-  "cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
-  "com.android.browser": "17.8.211101",
-  "com.android.calendar": "15.0.0.8",
-  "com.android.camera": "5.2.000580.2",
-  "com.android.contacts": "15.0.0.9",
-  "com.android.deskclock": "15.13.0",
-  "com.android.email": "V13_20230919_d3",
-  "com.android.fileexplorer": "5.0.2.0",
-  "com.android.incallui": "3.0.59",
-  "com.android.mms": "15.0.0.8",
-  "com.android.providers.downloads.ui": "123.10.11.800005",
-  "com.android.quicksearchbox": "10.3.15.11143",
-  "com.android.soundrecorder": "5.0.13.9",
-  "com.android.thememanager": "4.2.2.6",
-  "com.android.updater": "8.4.4",
-  "com.baidu.input_mi": "10.6.122.210",
-  "com.duokan.phone.remotecontroller": "6.6.7M",
-  "com.iflytek.inputmethod.miui": "8.1.8604",
-  "com.mfashiongallery.emag": "M923102900-S",
-  "com.mi.health": "3.23.3",
-  "com.milink.service": "15.1.0.1.bcc1f12.2912291",
-  "com.mipay.wallet": "6.65.1.4924.2152",
-  "com.miui.accessibility": "6.1.3",
-  "com.miui.aod": "DEV-2.17.2068-11211706",
-  "com.miui.backup": "6.5.1.0",
-  "com.miui.bugreport": "15.0.0.5",
-  "com.miui.calculator": "15.0.12",
-  "com.miui.carlink": "1.6.0-20231101",
-  "com.miui.cleanmaster": "664.0.231013.release",
-  "com.miui.cloudbackup": "1.12.1.6.11",
-  "com.miui.cloudservice": "1.12.0.1.70",
-  "com.miui.compass": "15.0.10.1",
-  "com.miui.contentcatcher": "1.0.004",
-  "com.miui.contentextension": "3.1.2",
-  "com.miui.core": "1.20.1.5",
-  "com.miui.extraphoto": "2.0.6.0.0",
-  "com.miui.gallery": "3.7.0.2",
-  "com.miui.greenguard": "3.9.11.06",
-  "com.miui.guardprovider": "2.0.2-20231103.0",
-  "com.miui.home": "RELEASE-4.39.14.7718-11212221",
-  "com.miui.huanji": "4.1.9.3",
-  "com.miui.hybrid": "1.10.6.6",
-  "com.miui.maintenancemode": "3.1.4",
-  "com.miui.mediaeditor": "1.5.1.11.4",
-  "com.miui.mediaviewer": "v2023103003(MediaViewer-ROM)",
-  "com.miui.miinput": "RELEASE-1.0.2309051646",
-  "com.miui.miservice": "15.0.0.5",
-  "com.miui.mishare.connectivity": "2.21.5",
-  "com.miui.misound": "2.0",
-  "com.miui.miwallpaper": "3.1.4-ALPHA-11091031",
-  "com.miui.newhome": "6.3.10.0871",
-  "com.miui.newmidrive": "1.12.0.5.99",
-  "com.miui.nextpay": "23.11.01.1",
-  "com.miui.notes": "7.1.6",
-  "com.miui.notification": "1.1.6.8",
-  "com.miui.packageinstaller": "5.2.0.1.0-20231106",
-  "com.miui.personalassistant": "5.9.3-11212034",
-  "com.miui.phrase": "3.5.3",
-  "com.miui.player": "4.19.0.3",
-  "com.miui.screenrecorder": "2.13.0.5.1",
-  "com.miui.screenshot": "RELEASE-1.4.97-11131423",
-  "com.miui.securityadd": "9.11.54-231111.0.1",
-  "com.miui.securitycenter": "8.6.4-231117.0.1",
-  "com.miui.securitycore": "1.1.4-15-231110",
-  "com.miui.securityinputmethod": "3.2.3",
-  "com.miui.securitymanager": "10.0",
-  "com.miui.themestore": "12.0",
-  "com.miui.thirdappassistant": "4.5",
-  "com.miui.touchassistant": "15.0.0.9.1",
-  "com.miui.tsmclient": "23.11.01.1.f",
-  "com.miui.uireporter": "2.2.0",
-  "com.miui.video": "v2023110790(MiVideo-ROM)",
-  "com.miui.virtualsim": "6.5.5",
-  "com.miui.vpnsdkmanager": "24",
-  "com.miui.weather2": "15.0.3.0",
-  "com.miui.yellowpage": "15.202310130",
-  "com.mobiletools.systemhelper": "3.0.0-20231027",
-  "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202310202015",
-  "com.tencent.soter.soterserver": "1.0.230417.1",
-  "com.unionpay.tsmservice.mi": "01.00.51",
-  "com.xiaomi.ab": "3.0.1.20231020",
-  "com.xiaomi.account": "R-23.08.07.08",
-  "com.xiaomi.aiasst.service": "5.6.1",
-  "com.xiaomi.aiasst.vision": "4.6.2",
-  "com.xiaomi.aicr": "2.0",
-  "com.xiaomi.aireco": "1.11.20.a9hs",
-  "com.xiaomi.barrage": "3.0.0.231024",
-  "com.xiaomi.cameratools": "23.11.09.1",
-  "com.xiaomi.gamecenter.sdk.service": "8.3.2",
-  "com.xiaomi.joyose": "2.3.06",
-  "com.xiaomi.location.fused": "4.0.0",
-  "com.xiaomi.macro": "2.2.4.S",
-  "com.xiaomi.market": "4.61.1",
-  "com.xiaomi.metoknlp": "6.0.5",
-  "com.xiaomi.mi_connect_service": "3.1.453.10",
-  "com.xiaomi.mibrain.speech": "1.5.1",
-  "com.xiaomi.migameservice": "0.6.9-B",
-  "com.xiaomi.mirror": "15.00.85",
-  "com.xiaomi.mis": "0.5.4-2023110115",
-  "com.xiaomi.misettings": "2.9.9.67",
-  "com.xiaomi.payment": "2.7.2",
-  "com.xiaomi.registration": "4.0.2",
-  "com.xiaomi.scanner": "15.5.1",
-  "com.xiaomi.simactivate.service": "R-23.08.28",
-  "com.xiaomi.ugd": "1.2.0",
-  "com.xiaomi.vipaccount": "4.6.0",
-  "com.xiaomi.xaee": "0.2",
-  "com.xiaomi.xmsf": "7.0.1-C",
-  "miui.systemui.plugin": "15.0.1.32.1"
+	"cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
+	"com.android.browser": "17.8.211101",
+	"com.android.calendar": "15.0.0.8",
+	"com.android.camera": "5.2.000590.0",
+	"com.android.contacts": "15.0.0.9",
+	"com.android.deskclock": "15.13.0",
+	"com.android.email": "V13_20230919_d3",
+	"com.android.fileexplorer": "5.0.2.2",
+	"com.android.incallui": "3.0.62",
+	"com.android.mms": "15.0.0.8",
+	"com.android.providers.downloads.ui": "123.10.11.800006",
+	"com.android.quicksearchbox": "10.3.15.12065",
+	"com.android.soundrecorder": "5.0.13.9",
+	"com.android.thememanager": "4.2.3.0",
+	"com.android.updater": "8.4.5",
+	"com.baidu.input_mi": "10.6.122.210",
+	"com.duokan.phone.remotecontroller": "6.6.7M",
+	"com.iflytek.inputmethod.miui": "8.1.8604",
+	"com.mfashiongallery.emag": "M923120400-S",
+	"com.mi.health": "3.23.3",
+	"com.milink.service": "15.1.0.2.3c7fa79.2924956",
+	"com.mipay.wallet": "6.65.1.4924.2152",
+	"com.miui.accessibility": "6.1.3",
+	"com.miui.aod": "DEV-2.17.2078-12051050",
+	"com.miui.backup": "6.5.1.5",
+	"com.miui.bugreport": "15.0.0.5",
+	"com.miui.calculator": "15.0.12",
+	"com.miui.carlink": "1.6.0-20231101",
+	"com.miui.cleanmaster": "664.0.231013.release",
+	"com.miui.cloudbackup": "1.12.1.6.16",
+	"com.miui.cloudservice": "1.12.0.1.70",
+	"com.miui.compass": "15.0.10.1",
+	"com.miui.contentcatcher": "1.0.004",
+	"com.miui.contentextension": "3.1.2",
+	"com.miui.core": "1.20.1.5",
+	"com.miui.extraphoto": "2.0.6.0.0",
+	"com.miui.gallery": "3.7.0.2",
+	"com.miui.greenguard": "3.9.11.06",
+	"com.miui.guardprovider": "2.0.3-20231124.0",
+	"com.miui.home": "RELEASE-4.39.14.7749-12051514",
+	"com.miui.huanji": "4.2.0",
+	"com.miui.hybrid": "1.10.6.6",
+	"com.miui.maintenancemode": "3.1.4",
+	"com.miui.mediaeditor": "1.5.1.11.4",
+	"com.miui.mediaviewer": "v2023103003(MediaViewer-ROM)",
+	"com.miui.miinput": "RELEASE-1.0.2309051646",
+	"com.miui.miservice": "15.0.0.5",
+	"com.miui.mishare.connectivity": "2.21.5",
+	"com.miui.misound": "2.0",
+	"com.miui.miwallpaper": "3.1.7-ALPHA-11242128",
+	"com.miui.newhome": "6.3.10.0871",
+	"com.miui.newmidrive": "1.12.0.5.99",
+	"com.miui.nextpay": "23.11.01.1",
+	"com.miui.notes": "7.1.6",
+	"com.miui.notification": "1.1.6.9",
+	"com.miui.packageinstaller": "5.2.0.1.0-20231106",
+	"com.miui.personalassistant": "5.9.3-11212034",
+	"com.miui.phrase": "3.5.4",
+	"com.miui.player": "4.19.1.5-R",
+	"com.miui.screenrecorder": "2.13.0.7.1",
+	"com.miui.screenshot": "RELEASE-1.4.97-11131423",
+	"com.miui.securityadd": "9.11.54-231111.0.1",
+	"com.miui.securitycenter": "8.7.0-231130.0.1",
+	"com.miui.securitycore": "1.1.6-15-231129",
+	"com.miui.securityinputmethod": "3.2.3",
+	"com.miui.securitymanager": "10.0",
+	"com.miui.themestore": "12.0",
+	"com.miui.thirdappassistant": "4.5",
+	"com.miui.touchassistant": "15.0.0.9.1",
+	"com.miui.tsmclient": "23.11.01.1.f",
+	"com.miui.uireporter": "2.2.1",
+	"com.miui.video": "v2023110790(MiVideo-ROM)",
+	"com.miui.virtualsim": "6.5.5",
+	"com.miui.vpnsdkmanager": "24",
+	"com.miui.weather2": "15.0.6.0",
+	"com.miui.yellowpage": "15.202311140",
+	"com.mobiletools.systemhelper": "3.0.0-20231027",
+	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202311172024",
+	"com.tencent.soter.soterserver": "1.0.230417.1",
+	"com.unionpay.tsmservice.mi": "01.00.51",
+	"com.xiaomi.ab": "3.0.1.20231020",
+	"com.xiaomi.account": "R-23.08.07.08",
+	"com.xiaomi.aiasst.service": "5.6.1",
+	"com.xiaomi.aiasst.vision": "4.6.2",
+	"com.xiaomi.aicr": "2.0-2023120817",
+	"com.xiaomi.aireco": "1.11.20.a9hs",
+	"com.xiaomi.barrage": "3.0.0.231024",
+	"com.xiaomi.cameratools": "23.11.09.1",
+	"com.xiaomi.gamecenter.sdk.service": "8.3.2",
+	"com.xiaomi.joyose": "2.3.07",
+	"com.xiaomi.location.fused": "4.0.0",
+	"com.xiaomi.macro": "2.2.4.S",
+	"com.xiaomi.market": "4.61.1",
+	"com.xiaomi.metoknlp": "6.0.5",
+	"com.xiaomi.mi_connect_service": "3.1.453.10",
+	"com.xiaomi.mibrain.speech": "1.5.1",
+	"com.xiaomi.migameservice": "0.6.9-B",
+	"com.xiaomi.mirror": "15.00.85",
+	"com.xiaomi.mis": "0.5.7-2023112215",
+	"com.xiaomi.misettings": "2.9.9.67",
+	"com.xiaomi.payment": "2.7.2",
+	"com.xiaomi.registration": "4.0.2",
+	"com.xiaomi.scanner": "15.5.1",
+	"com.xiaomi.simactivate.service": "R-23.08.28",
+	"com.xiaomi.ugd": "1.2.0",
+	"com.xiaomi.vipaccount": "4.6.0",
+	"com.xiaomi.xaee": "0.2",
+	"com.xiaomi.xmsf": "7.0.1-C",
+	"miui.systemui.plugin": "15.0.1.32.1"
 }
