同步离线数据库 + 添加一个不需要提取的 apk

--- a/fold/app_code.json
+++ b/fold/app_code.json
@@ -2,7 +2,7 @@
 	"cn.wps.moffice_eng.xiaomi.lite": 350,
 	"com.android.browser": 140793000,
 	"com.android.calendar": 161500190,
-	"com.android.camera": 510006302,
+	"com.android.camera": 510006801,
 	"com.android.contacts": 4005,
 	"com.android.deskclock": 1303001300,
 	"com.android.email": 1041003,
@@ -13,10 +13,10 @@
 	"com.android.quicksearchbox": 20230909,
 	"com.android.soundrecorder": 500139,
 	"com.android.thememanager": 4226,
-	"com.android.updater": 845,
-	"com.baidu.input_mi": 3180,
+	"com.android.updater": 846,
+	"com.baidu.input_mi": 4111,
 	"com.duokan.phone.remotecontroller": 6353,
-	"com.iflytek.inputmethod.miui": 8110,
+	"com.iflytek.inputmethod.miui": 8118,
 	"com.mi.health": 320004,
 	"com.milink.service": 150000050,
 	"com.mipay.wallet": 20577475,
@@ -25,7 +25,8 @@
 	"com.miui.backup": 6515,
 	"com.miui.bugreport": 15000005,
 	"com.miui.calculator": 315000010,
-	"com.miui.carlink": 101006000,
+	"com.miui.carlink": 102000001,
+	"com.miui.cit": 45,
 	"com.miui.cleanmaster": 100664,
 	"com.miui.cloudbackup": 112010616,
 	"com.miui.cloudservice": 112000170,
@@ -33,11 +34,11 @@
 	"com.miui.contentcatcher": 20231108,
 	"com.miui.contentextension": 30012,
 	"com.miui.core": 1201599,
-	"com.miui.extraphoto": 108070000,
+	"com.miui.extraphoto": 108070200,
 	"com.miui.gallery": 405517,
 	"com.miui.greenguard": 920231107,
 	"com.miui.guardprovider": 209,
-	"com.miui.home": 439147749,
+	"com.miui.home": 439147750,
 	"com.miui.huanji": 42000,
 	"com.miui.hybrid": 11030907,
 	"com.miui.maintenancemode": 14,
@@ -46,7 +47,7 @@
 	"com.miui.miinput": 23072510,
 	"com.miui.miservice": 15000002,
 	"com.miui.mishare.connectivity": 22105,
-	"com.miui.misound": 231211,
+	"com.miui.misound": 231212,
 	"com.miui.miwallpaper": 500317000,
 	"com.miui.newmidrive": 112000599,
 	"com.miui.nextpay": 1410,
@@ -58,22 +59,22 @@
 	"com.miui.player": 4190200,
 	"com.miui.screenrecorder": 21300071,
 	"com.miui.screenshot": 10400097,
-	"com.miui.securityadd": 91154,
-	"com.miui.securitycenter": 40000870,
-	"com.miui.securitycore": 40000116,
+	"com.miui.securityadd": 91156,
+	"com.miui.securitycenter": 40000872,
+	"com.miui.securitycore": 40000119,
 	"com.miui.securityinputmethod": 323,
 	"com.miui.securitymanager": 10,
 	"com.miui.themestore": 12,
 	"com.miui.thirdappassistant": 1028,
 	"com.miui.touchassistant": 150000091,
-	"com.miui.tsmclient": 1410,
+	"com.miui.tsmclient": 1435,
 	"com.miui.uireporter": 20201,
 	"com.miui.video": 2023090990,
 	"com.miui.vpnsdkmanager": 24,
-	"com.miui.weather2": 150000013,
+	"com.miui.weather2": 150000014,
 	"com.miui.yellowpage": 202311140,
 	"com.mobiletools.systemhelper": 3,
-	"com.sohu.inputmethod.sogou.xiaomi": 1918,
+	"com.sohu.inputmethod.sogou.xiaomi": 1934,
 	"com.tencent.soter.soterserver": 221024,
 	"com.unionpay.tsmservice.mi": 45,
 	"com.xiaomi.ab": 167,
@@ -84,15 +85,15 @@
 	"com.xiaomi.barrage": 232,
 	"com.xiaomi.cameratools": 2309260,
 	"com.xiaomi.gamecenter.sdk.service": 8100602,
-	"com.xiaomi.joyose": 302,
+	"com.xiaomi.joyose": 309,
 	"com.xiaomi.location.fused": 14000,
 	"com.xiaomi.macro": 31220522,
 	"com.xiaomi.market": 5003063,
-	"com.xiaomi.metoknlp": 14004,
+	"com.xiaomi.metoknlp": 14010,
 	"com.xiaomi.mi_connect_service": 3001453,
 	"com.xiaomi.mibrain.speech": 51,
 	"com.xiaomi.migameservice": 70,
-	"com.xiaomi.mirror": 150085,
+	"com.xiaomi.mirror": 150092,
 	"com.xiaomi.mis": 507,
 	"com.xiaomi.misettings": 231511011,
 	"com.xiaomi.payment": 2003048,
@@ -100,8 +101,8 @@
 	"com.xiaomi.scanner": 1322032400,
 	"com.xiaomi.simactivate.service": 1230828,
 	"com.xiaomi.ugd": 120,
-	"com.xiaomi.vipaccount": 230613,
+	"com.xiaomi.vipaccount": 230614,
 	"com.xiaomi.xaee": 2,
 	"com.xiaomi.xmsf": 70000001,
-	"miui.systemui.plugin": 150013200
+	"miui.systemui.plugin": 150015400
 }
