--- a/fold/app_version.json
+++ b/fold/app_version.json
@@ -2,7 +2,7 @@
 	"cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
 	"com.android.browser": "14.7.93",
 	"com.android.calendar": "16.15.0.19-HD",
-	"com.android.camera": "5.1.000630.2",
+	"com.android.camera": "5.1.000680.1",
 	"com.android.contacts": "15.4.0.05",
 	"com.android.deskclock": "15.13.0",
 	"com.android.email": "V13_20230919_d3",
@@ -13,10 +13,10 @@
 	"com.android.quicksearchbox": "10.0.0.1",
 	"com.android.soundrecorder": "5.0.13.9",
 	"com.android.thememanager": "4.2.2.6-HD",
-	"com.android.updater": "8.4.5",
-	"com.baidu.input_mi": "10.6.122.185",
+	"com.android.updater": "8.4.6",
+	"com.baidu.input_mi": "10.6.122.1135",
 	"com.duokan.phone.remotecontroller": "6.6.7M",
-	"com.iflytek.inputmethod.miui": "8.1.8110",
+	"com.iflytek.inputmethod.miui": "8.1.8118",
 	"com.mi.health": "3.20.4",
 	"com.milink.service": "15.0.5.0.ceaac61.2919843",
 	"com.mipay.wallet": "6.63.0.4892.2152",
@@ -25,7 +25,8 @@
 	"com.miui.backup": "6.5.1.5",
 	"com.miui.bugreport": "15.0.0.5",
 	"com.miui.calculator": "15.0.10",
-	"com.miui.carlink": "1.6.0-20231101",
+	"com.miui.carlink": "2.0.1-20231207",
+	"com.miui.cit": "0.4.7-SNAPSHOT",
 	"com.miui.cleanmaster": "664.0.231007.release",
 	"com.miui.cloudbackup": "1.12.1.6.16",
 	"com.miui.cloudservice": "1.12.0.1.70",
@@ -33,11 +34,11 @@
 	"com.miui.contentcatcher": "1.0.004",
 	"com.miui.contentextension": "3.1.2",
 	"com.miui.core": "1.20.1.5",
-	"com.miui.extraphoto": "1.8.7.0.0",
+	"com.miui.extraphoto": "1.8.7.2.0",
 	"com.miui.gallery": "3.6.0.13",
 	"com.miui.greenguard": "3.9.11.06-fold",
 	"com.miui.guardprovider": "2.0.3-20231124.0",
-	"com.miui.home": "RELEASE-4.39.14.7749-12051514",
+	"com.miui.home": "RELEASE-4.39.14.7750-12111906",
 	"com.miui.huanji": "4.2.0",
 	"com.miui.hybrid": "1.10.3.9",
 	"com.miui.maintenancemode": "3.1.2",
@@ -58,22 +59,22 @@
 	"com.miui.player": "4.19.2.0-pad",
 	"com.miui.screenrecorder": "2.13.0.7.1",
 	"com.miui.screenshot": "RELEASE-1.4.97-11131423",
-	"com.miui.securityadd": "9.11.54-231108.0.1",
-	"com.miui.securitycenter": "8.7.0-231130.0.1",
-	"com.miui.securitycore": "1.1.6-15-231129",
+	"com.miui.securityadd": "9.11.56-231206.0.1",
+	"com.miui.securitycenter": "8.7.2-231213.0.1",
+	"com.miui.securitycore": "1.1.9-15-231214",
 	"com.miui.securityinputmethod": "3.2.3",
 	"com.miui.securitymanager": "10.0",
 	"com.miui.themestore": "12.0",
 	"com.miui.thirdappassistant": "4.5",
 	"com.miui.touchassistant": "15.0.0.9.1",
-	"com.miui.tsmclient": "23.11.01.1.f",
+	"com.miui.tsmclient": "23.12.13.1.f",
 	"com.miui.uireporter": "2.2.1",
 	"com.miui.video": "v2023090990(MiVideo-ROM)",
 	"com.miui.vpnsdkmanager": "24",
-	"com.miui.weather2": "15.0.1.3-HD",
+	"com.miui.weather2": "15.0.1.4-HD",
 	"com.miui.yellowpage": "15.202311140",
 	"com.mobiletools.systemhelper": "1.2-20230815",
-	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202311172024",
+	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202312152354",
 	"com.tencent.soter.soterserver": "1.0.221024.2",
 	"com.unionpay.tsmservice.mi": "01.00.44",
 	"com.xiaomi.ab": "3.0.1.20231020",
@@ -84,15 +85,15 @@
 	"com.xiaomi.barrage": "2.0.9",
 	"com.xiaomi.cameratools": "23.09.26.0",
 	"com.xiaomi.gamecenter.sdk.service": "8.1.6.2",
-	"com.xiaomi.joyose": "2.3.02",
+	"com.xiaomi.joyose": "2.3.09",
 	"com.xiaomi.location.fused": "4.0.0",
 	"com.xiaomi.macro": "2.2.4.S",
 	"com.xiaomi.market": "5.4.3",
-	"com.xiaomi.metoknlp": "6.0.4",
+	"com.xiaomi.metoknlp": "6.0.10",
 	"com.xiaomi.mi_connect_service": "3.1.453.10",
 	"com.xiaomi.mibrain.speech": "1.5.1",
 	"com.xiaomi.migameservice": "0.7.0-B",
-	"com.xiaomi.mirror": "15.00.85",
+	"com.xiaomi.mirror": "15.00.92.h",
 	"com.xiaomi.mis": "0.5.7-2023112215",
 	"com.xiaomi.misettings": "2.9.9.67-fold",
 	"com.xiaomi.payment": "2.7.2",
@@ -100,8 +101,8 @@
 	"com.xiaomi.scanner": "15.5.1",
 	"com.xiaomi.simactivate.service": "R-23.08.28",
 	"com.xiaomi.ugd": "1.2.0",
-	"com.xiaomi.vipaccount": "4.4.6.P",
+	"com.xiaomi.vipaccount": "4.4.7.P",
 	"com.xiaomi.xaee": "0.2",
 	"com.xiaomi.xmsf": "7.0.1-C",
-	"miui.systemui.plugin": "15.0.1.32.0"
+	"miui.systemui.plugin": "15.0.1.54.0"
 }
