--- a/pad/app_version.json
+++ b/pad/app_version.json
@@ -2,39 +2,39 @@
 	"cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
 	"com.android.browser": "14.7.93",
 	"com.android.calendar": "16.15.0.17-HD",
-	"com.android.camera": "5.1.000630.3",
+	"com.android.camera": "5.1.000700.2",
 	"com.android.contacts": "15.2.0.03",
 	"com.android.deskclock": "15.13.0",
 	"com.android.email": "V13_20230919_d3",
 	"com.android.fileexplorer": "5.0.2.2",
-	"com.android.incallui": "3.1.37",
+	"com.android.incallui": "3.1.43",
 	"com.android.providers.downloads.ui": "123.10.11.807006",
 	"com.android.quicksearchbox": "10.0.0.6",
 	"com.android.soundrecorder": "5.0.13.9",
 	"com.android.thememanager": "4.2.2.9-HD",
-	"com.android.updater": "8.4.5",
-    "com.baidu.input_mi": "10.6.122.185",
-    "com.iflytek.inputmethod.miui": "8.1.8110",
+	"com.android.updater": "8.4.6",
+	"com.baidu.input_mi": "10.6.122.1135",
+	"com.iflytek.inputmethod.miui": "8.1.8118",
 	"com.milink.service": "15.0.5.0.ceaac61.2919843",
 	"com.mipay.wallet": "6.63.0.4892.2152",
 	"com.miui.accessibility": "6.1.3",
-    "com.miui.aod": "DEV-PAD-2.17.2079-12051038",
-    "com.miui.backup": "6.5.1.5",
+	"com.miui.aod": "DEV-PAD-2.17.2079-12051038",
+	"com.miui.backup": "6.5.1.5",
 	"com.miui.bugreport": "15.0.0.5",
 	"com.miui.calculator": "15.0.10",
-    "com.miui.cit": "0.4.7-SNAPSHOT",
+	"com.miui.cit": "0.4.7-SNAPSHOT",
 	"com.miui.cleanmaster": "764.0.231007.release",
 	"com.miui.cloudbackup": "1.12.1.6.16",
 	"com.miui.cloudservice": "1.12.0.1.70",
-    "com.miui.contentcatcher": "1.0.004",
-    "com.miui.core": "1.20.1.5",
+	"com.miui.contentcatcher": "1.0.004",
+	"com.miui.core": "1.20.1.5",
 	"com.miui.creation": "0.3.5",
-	"com.miui.extraphoto": "1.8.7.0.0",
+	"com.miui.extraphoto": "1.8.7.2.0",
 	"com.miui.gallery": "3.6.0.13",
 	"com.miui.greenguard": "3.9.11.06-tablet",
 	"com.miui.guardprovider": "2.0.3-20231124.0",
 	"com.miui.handwriting": "RELEASE-1.0.2312051740",
-	"com.miui.home": "RELEASE-4.40.0.6902-12071018",
+	"com.miui.home": "RELEASE-4.40.0.6903-12131956",
 	"com.miui.huanji": "4.2.0",
 	"com.miui.hybrid": "1.10.3.9",
 	"com.miui.maintenancemode": "3.1.4",
@@ -55,45 +55,45 @@
 	"com.miui.screenrecorder": "2.13.0.7.1",
 	"com.miui.screenshot": "RELEASE-1.4.97-11131423",
 	"com.miui.securityadd": "9.11.56-231206.0.1",
-	"com.miui.securitycenter": "8.7.3-231209.0.1.pad",
-    "com.miui.securitycore": "1.1.4-15-231129.pad",
+	"com.miui.securitycenter": "8.7.4-231213.0.1.pad",
+	"com.miui.securitycore": "1.1.7-15-231214.pad",
 	"com.miui.securityinputmethod": "3.2.3",
 	"com.miui.securitymanager": "10.0",
 	"com.miui.thirdappassistant": "4.5",
 	"com.miui.uireporter": "2.2.1",
 	"com.miui.video": "v2023090990(MiVideo-ROM)",
-    "com.miui.voiceassist": "6.51.1.1709",
+	"com.miui.voiceassist": "6.51.1.1709",
 	"com.miui.vpnsdkmanager": "24",
-	"com.miui.weather2": "15.0.1.3-HD",
+	"com.miui.weather2": "15.0.1.4-HD",
 	"com.miui.yellowpage": "15.202311140",
-	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202311172024",
+	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202312152354",
 	"com.tencent.soter.soterserver": "1.0.221024.2",
-    "com.xiaomi.ab": "3.0.1.20231020",
+	"com.xiaomi.ab": "3.0.1.20231020",
 	"com.xiaomi.account": "R-23.08.07.08",
 	"com.xiaomi.aiasst.vision": "4.6.2",
 	"com.xiaomi.aicr": "2.0",
 	"com.xiaomi.barrage": "2.0.9",
 	"com.xiaomi.cameratools": "23.09.26.0",
 	"com.xiaomi.gamecenter.sdk.service": "8.1.6.2",
-	"com.xiaomi.joyose": "2.3.02",
+	"com.xiaomi.joyose": "2.3.09",
 	"com.xiaomi.location.fused": "4.0.0",
 	"com.xiaomi.macro": "2.2.4.S",
 	"com.xiaomi.market": "8.3.0",
-	"com.xiaomi.metoknlp": "6.0.4",
+	"com.xiaomi.metoknlp": "6.0.10",
 	"com.xiaomi.mi_connect_service": "3.1.453.10",
 	"com.xiaomi.mibrain.speech": "1.5.1",
 	"com.xiaomi.migameservice": "0.7.0-B",
-	"com.xiaomi.mirror": "15.00.86.a",
-    "com.xiaomi.mis": "0.5.7-2023112215",
+	"com.xiaomi.mirror": "15.00.92.h",
+	"com.xiaomi.mis": "0.5.7-2023112215",
 	"com.xiaomi.misettings": "2.9.9.67-pad",
 	"com.xiaomi.mitukid": "2.0.2",
-	"com.xiaomi.mslgrdp": "1.1.0",
+	"com.xiaomi.mslgrdp": "2.0.0",
 	"com.xiaomi.payment": "2.7.2",
 	"com.xiaomi.scanner": "15.5.1",
-    "com.xiaomi.ugd": "1.2.0",
-	"com.xiaomi.vipaccount": "4.4.6.P",
+	"com.xiaomi.ugd": "1.2.0",
+	"com.xiaomi.vipaccount": "4.4.7.P",
 	"com.xiaomi.wpslauncher": "1.1.0",
-    "com.xiaomi.xaee": "0.2",
+	"com.xiaomi.xaee": "0.2",
 	"com.xiaomi.xmsf": "7.0.1-C",
-	"miui.systemui.plugin": "15.0.1.32.0"
+	"miui.systemui.plugin": "15.0.1.54.0"
 }
