--- a/phone/app_code.json
+++ b/phone/app_code.json
@@ -2,19 +2,19 @@
 	"cn.wps.moffice_eng.xiaomi.lite": 350,
 	"com.android.browser": 170802100,
 	"com.android.calendar": 15000008,
-	"com.android.camera": 520005900,
+	"com.android.camera": 520006902,
 	"com.android.contacts": 509,
 	"com.android.deskclock": 1303001300,
 	"com.android.email": 1041003,
 	"com.android.fileexplorer": 5022,
-	"com.android.incallui": 950,
-	"com.android.mms": 15000008,
+	"com.android.incallui": 966,
+	"com.android.mms": 15000009,
 	"com.android.providers.downloads.ui": 1231011006,
-	"com.android.quicksearchbox": 210030155,
+	"com.android.quicksearchbox": 210030156,
 	"com.android.soundrecorder": 500139,
-	"com.android.thememanager": 4230,
-	"com.android.updater": 845,
-	"com.baidu.input_mi": 3200,
+	"com.android.thememanager": 4231,
+	"com.android.updater": 846,
+	"com.baidu.input_mi": 4111,
 	"com.duokan.phone.remotecontroller": 6353,
 	"com.iflytek.inputmethod.miui": 8604,
 	"com.mfashiongallery.emag": 2023120400,
@@ -22,23 +22,24 @@
 	"com.milink.service": 150010002,
 	"com.mipay.wallet": 20577485,
 	"com.miui.accessibility": 23110310,
-	"com.miui.aod": 21702078,
+	"com.miui.aod": 21702082,
 	"com.miui.backup": 6515,
 	"com.miui.bugreport": 15000005,
 	"com.miui.calculator": 315000012,
-	"com.miui.carlink": 101006000,
-	"com.miui.cleanmaster": 100664,
+	"com.miui.carlink": 102000001,
+	"com.miui.cit": 45,
+	"com.miui.cleanmaster": 100668,
 	"com.miui.cloudbackup": 112010616,
-	"com.miui.cloudservice": 112000170,
+	"com.miui.cloudservice": 112000180,
 	"com.miui.compass": 1500101,
 	"com.miui.contentcatcher": 20231108,
 	"com.miui.contentextension": 30012,
 	"com.miui.core": 1201599,
 	"com.miui.extraphoto": 200060000,
-	"com.miui.gallery": 407554,
+	"com.miui.gallery": 407555,
 	"com.miui.greenguard": 920231106,
 	"com.miui.guardprovider": 209,
-	"com.miui.home": 439147749,
+	"com.miui.home": 439147750,
 	"com.miui.huanji": 42000,
 	"com.miui.hybrid": 11060601,
 	"com.miui.maintenancemode": 16,
@@ -47,7 +48,7 @@
 	"com.miui.miinput": 23090516,
 	"com.miui.miservice": 15000005,
 	"com.miui.mishare.connectivity": 22105,
-	"com.miui.misound": 231211,
+	"com.miui.misound": 231212,
 	"com.miui.miwallpaper": 500317000,
 	"com.miui.newhome": 11171,
 	"com.miui.newmidrive": 112000599,
@@ -60,15 +61,15 @@
 	"com.miui.player": 4190105,
 	"com.miui.screenrecorder": 21300071,
 	"com.miui.screenshot": 10400097,
-	"com.miui.securityadd": 91154,
-	"com.miui.securitycenter": 40000870,
-	"com.miui.securitycore": 40000116,
+	"com.miui.securityadd": 91156,
+	"com.miui.securitycenter": 40000872,
+	"com.miui.securitycore": 40000119,
 	"com.miui.securityinputmethod": 323,
 	"com.miui.securitymanager": 10,
 	"com.miui.themestore": 12,
 	"com.miui.thirdappassistant": 1028,
 	"com.miui.touchassistant": 150000091,
-	"com.miui.tsmclient": 1410,
+	"com.miui.tsmclient": 1435,
 	"com.miui.uireporter": 20201,
 	"com.miui.video": 2023110790,
 	"com.miui.virtualsim": 655,
@@ -76,29 +77,29 @@
 	"com.miui.weather2": 15000600,
 	"com.miui.yellowpage": 202311140,
 	"com.mobiletools.systemhelper": 31,
-	"com.sohu.inputmethod.sogou.xiaomi": 1918,
+	"com.sohu.inputmethod.sogou.xiaomi": 1934,
 	"com.tencent.soter.soterserver": 230417,
 	"com.unionpay.tsmservice.mi": 52,
 	"com.xiaomi.ab": 167,
 	"com.xiaomi.account": 323080708,
 	"com.xiaomi.aiasst.service": 1822,
 	"com.xiaomi.aiasst.vision": 405006002,
-	"com.xiaomi.aicr": 2023120817,
+	"com.xiaomi.aicr": 2023121320,
 	"com.xiaomi.aireco": 101011020,
 	"com.xiaomi.barrage": 309,
 	"com.xiaomi.cameratools": 2311091,
 	"com.xiaomi.gamecenter.sdk.service": 8300200,
-	"com.xiaomi.joyose": 307,
+	"com.xiaomi.joyose": 309,
 	"com.xiaomi.location.fused": 14000,
 	"com.xiaomi.macro": 31220522,
 	"com.xiaomi.market": 40005261,
-	"com.xiaomi.metoknlp": 14005,
+	"com.xiaomi.metoknlp": 14010,
 	"com.xiaomi.mi_connect_service": 3001453,
 	"com.xiaomi.mibrain.speech": 51,
 	"com.xiaomi.migameservice": 69,
-	"com.xiaomi.mirror": 150085,
+	"com.xiaomi.mirror": 150092,
 	"com.xiaomi.mis": 507,
-	"com.xiaomi.misettings": 231511013,
+	"com.xiaomi.misettings": 231515013,
 	"com.xiaomi.payment": 2003048,
 	"com.xiaomi.registration": 7,
 	"com.xiaomi.scanner": 1322032400,
@@ -107,5 +108,5 @@
 	"com.xiaomi.vipaccount": 230809,
 	"com.xiaomi.xaee": 2,
 	"com.xiaomi.xmsf": 70000001,
-	"miui.systemui.plugin": 150013201
+	"miui.systemui.plugin": 150015400
 }
